--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1832,7 +1832,6 @@ payload:
   - '+.1sapp.com'
   - '+.1shang.com'
   - '+.1shangbiao.com'
-  - '+.1sheng.com'
   - '+.1shoucang.com'
   - '+.1sj.tv'
   - '+.1sohu.com'
@@ -1940,6 +1939,7 @@ payload:
   - '+.210166.com'
   - '+.210997.com'
   - '+.210z.com'
+  - '+.2113.net'
   - '+.2115.com'
   - '+.211600.com'
   - '+.211ic.com'
@@ -6549,6 +6549,7 @@ payload:
   - '+.92wx.com'
   - '+.92wy.com'
   - '+.92xygame.com'
+  - '+.92yo.com'
   - '+.930hh.com'
   - '+.9312.net'
   - '+.933.moe'
@@ -8740,6 +8741,7 @@ payload:
   - '+.apizza.net'
   - '+.apjingsi.com'
   - '+.apk3.com'
+  - '+.apk4399.com'
   - '+.apkevery.com'
   - '+.apkpackagesys.com'
   - '+.apkplug.com'
@@ -15190,7 +15192,6 @@ payload:
   - '+.cnad.com'
   - '+.cnaf.com'
   - '+.cnagcoin.com'
-  - '+.cnaho.com'
   - '+.cnaicpa.org'
   - '+.cnaidc.com'
   - '+.cnaifm.com'
@@ -15902,6 +15903,7 @@ payload:
   - '+.comingchina.com'
   - '+.comlan.com'
   - '+.comlbs.com'
+  - '+.commander1.com'
   - '+.commchina.net'
   - '+.communicatte.com'
   - '+.comocloud.net'
@@ -17277,7 +17279,6 @@ payload:
   - '+.daoduoduo.com'
   - '+.daofengdj.com'
   - '+.daogeziyuan.com'
-  - '+.daogoubang.com'
   - '+.daoguo.com'
   - '+.daohang4.com'
   - '+.daohang88.com'
@@ -24100,6 +24101,7 @@ payload:
   - '+.gssdlv.com'
   - '+.gssfgk.com'
   - '+.gst-china.net'
+  - '+.gst.prod.dl.playstation.net'
   - '+.gstarcad.com'
   - '+.gstdt.com'
   - '+.gstonegames.com'
@@ -27918,7 +27920,6 @@ payload:
   - '+.huntkey.com'
   - '+.huntkeydiy.com'
   - '+.hunuo.com'
-  - '+.hunyinxuetang.com'
   - '+.hunyinyiyuan.com'
   - '+.huo-cun.com'
   - '+.huo119.com'
@@ -28249,6 +28250,7 @@ payload:
   - '+.hytd.com'
   - '+.hytera.com'
   - '+.hytic.net'
+  - '+.hyule74.com'
   - '+.hyundai-hmtc.com'
   - '+.hyundaibeijing.com'
   - '+.hyuuhit.com'
@@ -32440,6 +32442,7 @@ payload:
   - '+.juanpi.com'
   - '+.juanpimao.com'
   - '+.juanshangwang.com'
+  - '+.juanta.com'
   - '+.juanyunkeji.com'
   - '+.juaq.com'
   - '+.jubaopay.com'
@@ -32845,7 +32848,6 @@ payload:
   - '+.jyss.net'
   - '+.jysyzk.com'
   - '+.jytdlz.com'
-  - '+.jyteasy.com'
   - '+.jywstw.com'
   - '+.jyxdyzx.com'
   - '+.jyxfzd.com'
@@ -34615,6 +34617,7 @@ payload:
   - '+.lanshanweb.com'
   - '+.lanshenniao.com'
   - '+.lanshizi.com'
+  - '+.lant6.com'
   - '+.lantaoyu.com'
   - '+.lantian-hotel.com'
   - '+.lantian.tv'
@@ -36046,6 +36049,7 @@ payload:
   - '+.lltaohuaxiang.com'
   - '+.lltllt.com'
   - '+.lltoken.com'
+  - '+.llttc.com'
   - '+.llxzu.com'
   - '+.llycloud.com'
   - '+.llzg.com'
@@ -37110,7 +37114,6 @@ payload:
   - '+.maienguoji.com'
   - '+.maifjb.com'
   - '+.maigoo.com'
-  - '+.maiguduo.com'
   - '+.maihanji.com'
   - '+.maihaoche.com'
   - '+.maihehd.com'
@@ -41493,6 +41496,7 @@ payload:
   - '+.p512.com'
   - '+.p5412.com'
   - '+.p5w.net'
+  - '+.p6157.com'
   - '+.p8games.com'
   - '+.p99998888.com'
   - '+.pa.ci'
@@ -43904,7 +43908,9 @@ payload:
   - '+.qncyw.com'
   - '+.qndb.net'
   - '+.qnfuli.com'
+  - '+.qngcjx.com'
   - '+.qngslb.com'
+  - '+.qnhdkj.com'
   - '+.qnhuifu.com'
   - '+.qnjslm.com'
   - '+.qnl1.com'
@@ -45421,6 +45427,7 @@ payload:
   - '+.rulesofsurvivalgame.com'
   - '+.rum8.perf.linkedin.com'
   - '+.rumt-sg.com'
+  - '+.rumt-zh.com'
   - '+.runcmd.com'
   - '+.runcome.com'
   - '+.runde666.net'
@@ -46423,6 +46430,7 @@ payload:
   - '+.sgnongkang.com'
   - '+.sgou.com'
   - '+.sgshero.com'
+  - '+.sgst.prod.dl.playstation.net'
   - '+.sgsugou.com'
   - '+.sgsxw.com'
   - '+.sguo.com'
@@ -46883,6 +46891,7 @@ payload:
   - '+.shenzhenshouxin.com'
   - '+.shenzhentong.com'
   - '+.shenzhentour.com'
+  - '+.shenzhenware.com'
   - '+.shepai1688.com'
   - '+.shequfu.com'
   - '+.shequfu.net'
@@ -48286,7 +48295,6 @@ payload:
   - '+.so-b.com'
   - '+.so-love.com'
   - '+.so-naver.com'
-  - '+.so-voioe.com'
   - '+.so-w.com'
   - '+.so.com'
   - '+.so147.com'
@@ -49973,6 +49981,7 @@ payload:
   - '+.tadu.com'
   - '+.taeapp.com'
   - '+.tag.gg'
+  - '+.tagcommander.com'
   - '+.tagjj.com'
   - '+.taglyst.com'
   - '+.tagphi.net'
@@ -53757,6 +53766,7 @@ payload:
   - '+.vuepr.icu'
   - '+.vuevideo.net'
   - '+.vulbox.com'
+  - '+.vulcan.dl.playstation.net'
   - '+.vulnhunt.com'
   - '+.vulogcn.com'
   - '+.vultr1.com'
@@ -58144,7 +58154,6 @@ payload:
   - '+.xjzhongwu.com'
   - '+.xjzlyy.com'
   - '+.xjzsks.com'
-  - '+.xjzxedu.net'
   - '+.xjzyplay.com'
   - '+.xk8090.com'
   - '+.xk89.com'
@@ -58868,6 +58877,7 @@ payload:
   - '+.xxmh225.com'
   - '+.xxmh226.com'
   - '+.xxmh460.com'
+  - '+.xxminizu.com'
   - '+.xxnets.net'
   - '+.xxnmcd.com'
   - '+.xxoojoke.com'
@@ -61252,7 +61262,6 @@ payload:
   - '+.yuenwooping-truelegend.com'
   - '+.yuepaijia.com'
   - '+.yuepaow.net'
-  - '+.yuepinwang.com'
   - '+.yueplus.ink'
   - '+.yueqi.com'
   - '+.yueqiquan.com'
@@ -63240,7 +63249,6 @@ payload:
   - '+.zhuangxiubao.com'
   - '+.zhuangxiuzhai.com'
   - '+.zhuangyi.com'
-  - '+.zhuangzhuang.cf'
   - '+.zhuangzhuang.net'
   - '+.zhuanhuanqi.com'
   - '+.zhuaniao.com'
