--- a/directbak.yaml
+++ b/directbak.yaml
@@ -817,7 +817,6 @@ payload:
   - '+.108tian.com'
   - '+.109.com'
   - '+.10909.com'
-  - '+.1090ys.com'
   - '+.109876543210.com'
   - '+.10bests.com'
   - '+.10besty.com'
@@ -2666,7 +2665,6 @@ payload:
   - '+.33map.com'
   - '+.33map.net'
   - '+.33oncall.com'
-  - '+.33sp.com'
   - '+.33trip.com'
   - '+.33xs.com'
   - '+.33yq.com'
@@ -4137,7 +4135,6 @@ payload:
   - '+.51yueqian.com'
   - '+.51yund.com'
   - '+.51yundong.me'
-  - '+.51yunli.com'
   - '+.51yuu.com'
   - '+.51ywx.com'
   - '+.51zan.com'
@@ -4531,7 +4528,6 @@ payload:
   - '+.555yst.com'
   - '+.555zw.com'
   - '+.5566.net'
-  - '+.5567.cc'
   - '+.5567.me'
   - '+.556z.com'
   - '+.557.net'
@@ -7235,7 +7231,6 @@ payload:
   - '+.acg588.com'
   - '+.acg6.com'
   - '+.acgaa.xyz'
-  - '+.acgcp.com'
   - '+.acgdb.com'
   - '+.acgdmzy.com'
   - '+.acgdoge.net'
@@ -9816,7 +9811,6 @@ payload:
   - '+.baodaren.net'
   - '+.baodigs.com'
   - '+.baodingmeishi.com'
-  - '+.baodingtrade.com'
   - '+.baodu.com'
   - '+.baofeng.com'
   - '+.baofeng.net'
@@ -19616,6 +19610,7 @@ payload:
   - '+.e2esoft.com'
   - '+.e2say.com'
   - '+.e360e.com'
+  - '+.e360xs.com'
   - '+.e365.org'
   - '+.e365mall.com'
   - '+.e3cloud.com'
@@ -19912,7 +19907,6 @@ payload:
   - '+.ecyti.com'
   - '+.ed2000.com'
   - '+.ed2kers.com'
-  - '+.ed2kfile.com'
   - '+.ed2kk.com'
   - '+.eda-china.com'
   - '+.eda1024.com'
@@ -25913,7 +25907,6 @@ payload:
   - '+.heclouds.com'
   - '+.hecoe.com'
   - '+.hecpharm.com'
-  - '+.hedaotang.net'
   - '+.hedgehogrock.com'
   - '+.heduibu.com'
   - '+.heeeeeh.com'
@@ -33899,7 +33892,6 @@ payload:
   - '+.kq88.com'
   - '+.kqgeo.com'
   - '+.kqidong.com'
-  - '+.kqiwen.com'
   - '+.kqj123.com'
   - '+.kqmmm.com'
   - '+.kqqy.com'
@@ -34194,6 +34186,7 @@ payload:
   - '+.kumankeji.net'
   - '+.kumaoyun.com'
   - '+.kumifeng.com'
+  - '+.kunduo.com'
   - '+.kunfpuz.com'
   - '+.kungfucloud.com'
   - '+.kungfuenglish.com'
@@ -40082,7 +40075,6 @@ payload:
   - '+.nfyk.com'
   - '+.nfzhouyi.com'
   - '+.nfzmbrand.com'
-  - '+.nfzplus.com'
   - '+.ng-alain.com'
   - '+.nga.wiki'
   - '+.ngabbs.com'
@@ -40471,7 +40463,6 @@ payload:
   - '+.nopis.org'
   - '+.noposion.com'
   - '+.nopph.website'
-  - '+.noq.cc'
   - '+.nor-land.com'
   - '+.nordfxs.com'
   - '+.nordicways.com'
@@ -42347,7 +42338,6 @@ payload:
   - '+.pkpk.com'
   - '+.pkpky.com'
   - '+.pkpmsoft.com'
-  - '+.pkq2016.com'
   - '+.pksfc.com'
   - '+.pksky.com'
   - '+.pku-hit.com'
@@ -42557,7 +42547,6 @@ payload:
   - '+.poseidong.com'
   - '+.posfree.com'
   - '+.posge.com'
-  - '+.posingflowers.com'
   - '+.positivisten.com'
   - '+.posn.net'
   - '+.post183.net'
@@ -45933,6 +45922,7 @@ payload:
   - '+.scqiuchang.com'
   - '+.scrcu.com'
   - '+.scrdzf.com'
+  - '+.scredcross.com'
   - '+.scriptjc.com'
   - '+.scrmtech.com'
   - '+.scrsw.net'
@@ -47030,6 +47020,7 @@ payload:
   - '+.shineyie.com'
   - '+.shinianonline.com'
   - '+.shiningmidas.com'
+  - '+.shiningnew.com'
   - '+.shinnytech.com'
   - '+.shinsoukun.com'
   - '+.shinycg.com'
@@ -47414,7 +47405,6 @@ payload:
   - '+.shuimiao.net'
   - '+.shuimujiaju.com'
   - '+.shuimushequ.com'
-  - '+.shuinankeji.com'
   - '+.shuini.biz'
   - '+.shuipingzuo.com'
   - '+.shuiqian.cc'
@@ -53881,7 +53871,6 @@ payload:
   - '+.w7000.com'
   - '+.w8xitong.com'
   - '+.w918.com'
-  - '+.wa-lang.org'
   - '+.wa5.com'
   - '+.wa5as4.com'
   - '+.waaaat.com'
@@ -54347,7 +54336,6 @@ payload:
   - '+.wdszb.com'
   - '+.wdtlfj.com'
   - '+.wduw.com'
-  - '+.wdw6.com'
   - '+.wdw88.com'
   - '+.wdxmzy.com'
   - '+.wdxtub.com'
@@ -56781,7 +56769,6 @@ payload:
   - '+.xcsfcjyw.com'
   - '+.xcshaifen.com'
   - '+.xcstuido.com'
-  - '+.xcsyxx.net'
   - '+.xctmr.com'
   - '+.xcurrency.com'
   - '+.xcvgame.cc'
@@ -57991,6 +57978,7 @@ payload:
   - '+.xitongwanjia.com'
   - '+.xitongxz.net'
   - '+.xitongzhijia.net'
+  - '+.xitongzu.com'
   - '+.xitouwang.com'
   - '+.xitu.io'
   - '+.xituan.com'
@@ -58214,7 +58202,6 @@ payload:
   - '+.xltzgy.com'
   - '+.xluos.com'
   - '+.xlwxsw.com'
-  - '+.xlxzikao.com'
   - '+.xlylf.com'
   - '+.xlyouxi.com'
   - '+.xlys1904.com'
@@ -59034,7 +59021,6 @@ payload:
   - '+.xz577.com'
   - '+.xz6.com'
   - '+.xz6699.com'
-  - '+.xz6d.com'
   - '+.xz7.com'
   - '+.xzapi56.com'
   - '+.xzbu.com'
@@ -60139,6 +60125,7 @@ payload:
   - '+.yishuzi.org'
   - '+.yishuziti.com'
   - '+.yisier.com'
+  - '+.yisocms.com'
   - '+.yisou.com'
   - '+.yisouti.com'
   - '+.yisouyifa.com'
@@ -61730,6 +61717,7 @@ payload:
   - '+.yx-life.com'
   - '+.yx-s.com'
   - '+.yx-s.net'
+  - '+.yx007.com'
   - '+.yx0599.com'
   - '+.yx090.com'
   - '+.yx10011.com'
@@ -62348,7 +62336,6 @@ payload:
   - '+.zgdwzp.com'
   - '+.zgdxhbkf.com'
   - '+.zgdydyxh.com'
-  - '+.zgeci.com'
   - '+.zgfwgj.com'
   - '+.zgfxnews.com'
   - '+.zgfznews.com'
@@ -63076,6 +63063,7 @@ payload:
   - '+.zhonganfengshang.com'
   - '+.zhonganinfo.com'
   - '+.zhongbaounion.com'
+  - '+.zhongbenkeji.com'
   - '+.zhongbingtongxin.com'
   - '+.zhongbowenwu.com'
   - '+.zhongboxinwen.com'
