--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3365,6 +3365,7 @@ payload:
   - '+.4355.com'
   - '+.4366.com'
   - '+.436675.com'
+  - '+.4366pk.com'
   - '+.4377.com'
   - '+.4377info.com'
   - '+.437zhifu.com'
@@ -4251,6 +4252,7 @@ payload:
   - '+.52ai.com'
   - '+.52aimo.com'
   - '+.52ali88.com'
+  - '+.52alipay.com'
   - '+.52analysis.com'
   - '+.52article.com'
   - '+.52asus.com'
@@ -4491,7 +4493,6 @@ payload:
   - '+.54hcz.com'
   - '+.54heb.com'
   - '+.54im.com'
-  - '+.54jj.com'
   - '+.54jkw.com'
   - '+.54job.com'
   - '+.54kefu.net'
@@ -7772,7 +7773,6 @@ payload:
   - '+.ailete.com'
   - '+.ailewan.com'
   - '+.aili.com'
-  - '+.ailianbang.com'
   - '+.ailinglei.com'
   - '+.ailinhao.com'
   - '+.ailinux.net'
@@ -11277,6 +11277,7 @@ payload:
   - '+.blueskystudy.com'
   - '+.blueskyxn.com'
   - '+.blueslc.tech'
+  - '+.bluesoleil.com'
   - '+.bluestar-pc.com'
   - '+.bluestep.cc'
   - '+.blw.moe'
@@ -11458,7 +11459,6 @@ payload:
   - '+.books51.com'
   - '+.bookschina.com'
   - '+.bookshadow.com'
-  - '+.bookshi.com'
   - '+.bookshoptw.com'
   - '+.bookshuku.com'
   - '+.booksky.cc'
@@ -14018,7 +14018,6 @@ payload:
   - '+.chinaiol.com'
   - '+.chinaios.com'
   - '+.chinaipmagazine.com'
-  - '+.chinaipo.com'
   - '+.chinaiprlaw.com'
   - '+.chinairn.com'
   - '+.chinairr.org'
@@ -14894,6 +14893,7 @@ payload:
   - '+.clanzx.net'
   - '+.claritywallpaper.com'
   - '+.class01.com'
+  - '+.classinpaas.com'
   - '+.classmateer.com'
   - '+.clayidols.com'
   - '+.clb6.net'
@@ -16863,7 +16863,6 @@ payload:
   - '+.cz-yk.com'
   - '+.cz.cc'
   - '+.cz2sc.com'
-  - '+.cz365.com'
   - '+.cz8.com'
   - '+.cz89.com'
   - '+.czb365.com'
@@ -18794,6 +18793,7 @@ payload:
   - '+.door-expo.com'
   - '+.dooreb.com'
   - '+.doorhr.com'
+  - '+.doorzo.net'
   - '+.doowinfintec.com'
   - '+.dopa.com'
   - '+.dopic.net'
@@ -19286,6 +19286,7 @@ payload:
   - '+.duotai.net'
   - '+.duote.com'
   - '+.duotegame.com'
+  - '+.duoti181.shop'
   - '+.duotoupiao.com'
   - '+.duotuwang.com'
   - '+.duouoo.com'
@@ -23833,7 +23834,6 @@ payload:
   - '+.goodzuji.com'
   - '+.goofish.com'
   - '+.googlebridge.com'
-  - '+.googlefonts.net'
   - '+.googlenav.com'
   - '+.googlevip8.com'
   - '+.googlevoice.org'
@@ -30697,6 +30697,7 @@ payload:
   - '+.jdcloudcs.com'
   - '+.jdcloudedge.com'
   - '+.jdcloudnaming.net'
+  - '+.jdcloudstatic.com'
   - '+.jdcloudstatic.net'
   - '+.jdcloudstatus.net'
   - '+.jdcloudwaf.com'
@@ -31345,6 +31346,7 @@ payload:
   - '+.jinbikan.com'
   - '+.jinbilianmeng.com'
   - '+.jinbitou.net'
+  - '+.jinbuguo.com'
   - '+.jincaicaiwu.com'
   - '+.jinchanbest.com'
   - '+.jinchuang.org'
@@ -31880,7 +31882,6 @@ payload:
   - '+.jkgood.com'
   - '+.jkhapp.com'
   - '+.jkimg.net'
-  - '+.jkjkjiankang.com'
   - '+.jkjzt.com'
   - '+.jkpan.cc'
   - '+.jkpj.com'
@@ -32299,7 +32300,6 @@ payload:
   - '+.jshsoft.com'
   - '+.jshuachen.com'
   - '+.jshy.com'
-  - '+.jshylm.com'
   - '+.jsielxo.com'
   - '+.jsifaja.com'
   - '+.jsimg.cc'
@@ -33658,7 +33658,6 @@ payload:
   - '+.kknn.com'
   - '+.kknss.com'
   - '+.kkoot.com'
-  - '+.kkr5.com'
   - '+.kkredian.com'
   - '+.kks.me'
   - '+.kksmg.com'
@@ -33840,6 +33839,7 @@ payload:
   - '+.koreaxing.com'
   - '+.korimscdn.com'
   - '+.korirl.com'
+  - '+.korosensei.com'
   - '+.kotei-info.com'
   - '+.kotex-km.com'
   - '+.koto.com'
@@ -35399,6 +35399,7 @@ payload:
   - '+.licat.com'
   - '+.lichangtai.com'
   - '+.lichangtao.com'
+  - '+.lichee.pro'
   - '+.lichenglove.com'
   - '+.lichengwu.net'
   - '+.lichenjy.com'
@@ -36393,7 +36394,6 @@ payload:
   - '+.lovestu.com'
   - '+.loveteemo.com'
   - '+.loveuav.com'
-  - '+.loveunix.net'
   - '+.lovev.com'
   - '+.lovewith.me'
   - '+.lovewj.info'
@@ -38073,6 +38073,7 @@ payload:
   - '+.miaohealth.net'
   - '+.miaokaikeji.com'
   - '+.miaokaiyun.com'
+  - '+.miaokee.com'
   - '+.miaole1024.com'
   - '+.miaomaicar.com'
   - '+.miaomiaoxue.com'
@@ -39742,6 +39743,7 @@ payload:
   - '+.nbahero.com'
   - '+.nbahi.com'
   - '+.nbahjx.com'
+  - '+.nbaidai.com'
   - '+.nball.cc'
   - '+.nbaqmq.com'
   - '+.nbayaobasketballclub.com'
@@ -41575,6 +41577,7 @@ payload:
   - '+.pandadastudio.com'
   - '+.pandafoundation.org'
   - '+.pandahelp.vip'
+  - '+.pandahome.org'
   - '+.pandainc.cc'
   - '+.pandaminer.com'
   - '+.pandara.xyz'
@@ -42049,7 +42052,6 @@ payload:
   - '+.phpcomposer.com'
   - '+.phpconchina.com'
   - '+.phpcoo.com'
-  - '+.phpcto.org'
   - '+.phpddt.com'
   - '+.phpdr.net'
   - '+.phpe.net'
@@ -46096,7 +46098,6 @@ payload:
   - '+.sdwgyy.com'
   - '+.sdwscgs.com'
   - '+.sdx.microsoft.com'
-  - '+.sdxczn.com'
   - '+.sdxietong.com'
   - '+.sdxinboao.com'
   - '+.sdxitong.com'
@@ -46322,7 +46323,6 @@ payload:
   - '+.seoxiaosai.com'
   - '+.seoxuetang.com'
   - '+.seoyu.net'
-  - '+.seozhuanjia.com'
   - '+.sepact.com'
   - '+.sepri.com'
   - '+.septinn.com'
@@ -52332,6 +52332,7 @@ payload:
   - '+.tyi365.com'
   - '+.tyjmmy.com'
   - '+.tyjmqz.com'
+  - '+.tykeji.vip'
   - '+.tyksl.com'
   - '+.tymcdn.com'
   - '+.tyn.cc'
@@ -53700,6 +53701,7 @@ payload:
   - '+.vrpowder.com'
   - '+.vrrw.net'
   - '+.vrsat.com'
+  - '+.vrupup.com'
   - '+.vrvlink.com'
   - '+.vrvmanager.com'
   - '+.vrwuhan.com'
@@ -58119,7 +58121,6 @@ payload:
   - '+.xjltp.com'
   - '+.xjlxw.com'
   - '+.xjlz365.com'
-  - '+.xjmglr.com'
   - '+.xjmty.com'
   - '+.xjmw.net'
   - '+.xjpdf.com'
@@ -58382,7 +58383,6 @@ payload:
   - '+.xp5.com'
   - '+.xp6000.com'
   - '+.xp666.com'
-  - '+.xp74.com'
   - '+.xp85.com'
   - '+.xp868.com'
   - '+.xp933.com'
@@ -59643,6 +59643,7 @@ payload:
   - '+.ygwenxue.com'
   - '+.ygwh.cc'
   - '+.ygym.org'
+  - '+.ygzt.net'
   - '+.yh596.com'
   - '+.yh598.com'
   - '+.yh99.cc'
@@ -62445,7 +62446,6 @@ payload:
   - '+.zgw.com'
   - '+.zgweimeng.com'
   - '+.zgwenku.com'
-  - '+.zgwgfw.com'
   - '+.zgwhfe.com'
   - '+.zgwhw.com'
   - '+.zgwlcsj.com'
@@ -63682,6 +63682,7 @@ payload:
   - '+.zjjbtl.com'
   - '+.zjjd.org'
   - '+.zjjgcyz.com'
+  - '+.zjjizhi.com'
   - '+.zjjlvyou8264.com'
   - '+.zjjr.com'
   - '+.zjjsbank.com'
