--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3677,6 +3677,7 @@ payload:
   - '+.51autogo.com'
   - '+.51autoimg.com'
   - '+.51awifi.com'
+  - '+.51azure.cloud'
   - '+.51babybuy.com'
   - '+.51baigong.com'
   - '+.51banban.com'
@@ -5170,6 +5171,7 @@ payload:
   - '+.6688.com'
   - '+.66889.net'
   - '+.668895.com'
+  - '+.6688dns.com'
   - '+.6688pay.com'
   - '+.668app.com'
   - '+.668lw.com'
@@ -5522,7 +5524,6 @@ payload:
   - '+.7618.com'
   - '+.761a.com'
   - '+.762rc.com'
-  - '+.764100.com'
   - '+.7654.com'
   - '+.7659.com'
   - '+.765i.com'
@@ -7185,7 +7186,6 @@ payload:
   - '+.aboutidc.com'
   - '+.aboutnew.net'
   - '+.aboutyun.com'
-  - '+.abovede6.com'
   - '+.abreader.com'
   - '+.abslw.com'
   - '+.abtt266.com'
@@ -7959,7 +7959,6 @@ payload:
   - '+.aizhet.com'
   - '+.aizhi.biz'
   - '+.aizhibaby.com'
-  - '+.aizhigu.tv'
   - '+.aizhuizhui.com'
   - '+.aiziti.net'
   - '+.aizongyi.com'
@@ -8123,6 +8122,7 @@ payload:
   - '+.alipay.com'
   - '+.alipay.hk'
   - '+.alipay.net'
+  - '+.alipayauto.com'
   - '+.alipaycs.com'
   - '+.alipaydev.com'
   - '+.alipaydns.com'
@@ -8295,7 +8295,6 @@ payload:
   - '+.alphabole.com'
   - '+.alphafun.com'
   - '+.alsovalue.com'
-  - '+.alswl.com'
   - '+.altstory.com'
   - '+.altxw.com'
   - '+.aluaa.com'
@@ -12602,7 +12601,6 @@ payload:
   - '+.ccnovel.com'
   - '+.ccnpic.com'
   - '+.ccnt.com'
-  - '+.ccnvpt.com'
   - '+.ccoalnews.com'
   - '+.ccoco.vip'
   - '+.ccoi.ren'
@@ -14522,6 +14520,7 @@ payload:
   - '+.chuanglinggame.com'
   - '+.chuangluo.com'
   - '+.chuangread.com'
+  - '+.chuangseo.com'
   - '+.chuangshifurui.com'
   - '+.chuangtoo.com'
   - '+.chuangx.org'
@@ -17737,6 +17736,7 @@ payload:
   - '+.delixi.com'
   - '+.dell027.com'
   - '+.dellemc-solution.com'
+  - '+.delphijiaocheng.com'
   - '+.delunyk.com'
   - '+.demage.com'
   - '+.demaxiya.com'
@@ -18348,9 +18348,7 @@ payload:
   - '+.diynova.com'
   - '+.diypda.com'
   - '+.diyring.cc'
-  - '+.diytrade.com'
   - '+.diywoju.com'
-  - '+.diyworld.com'
   - '+.diywz.com'
   - '+.diyyh.com'
   - '+.diyzhuye.com'
@@ -19263,7 +19261,6 @@ payload:
   - '+.duoluodeyu.com'
   - '+.duoluosb.com'
   - '+.duomai.com'
-  - '+.duomeiti.co'
   - '+.duomi.com'
   - '+.duomi.me'
   - '+.duomiapp.com'
@@ -21269,7 +21266,6 @@ payload:
   - '+.fast.im'
   - '+.fastadmin.net'
   - '+.fastadx.com'
-  - '+.fastapi.net'
   - '+.fastbestbetergoodcdn.com'
   - '+.fastcdn.com'
   - '+.fastdo.cc'
@@ -22335,6 +22331,7 @@ payload:
   - '+.fubaofei.com'
   - '+.fuchaoqun.com'
   - '+.fuckingdata.com'
+  - '+.fucol.club'
   - '+.fudaiapp.com'
   - '+.fudanglp.com'
   - '+.fudanmed.com'
@@ -23084,7 +23081,6 @@ payload:
   - '+.gdtimg.com'
   - '+.gdtone.com'
   - '+.gdtongjiang.com'
-  - '+.gdtrafficad.com'
   - '+.gdtravel.com'
   - '+.gdttc.com'
   - '+.gdtz888.com'
@@ -23937,7 +23933,6 @@ payload:
   - '+.gp123.cc'
   - '+.gp1903.com'
   - '+.gp1907.com'
-  - '+.gp1909.com'
   - '+.gp241.com'
   - '+.gp259.com'
   - '+.gp451.com'
@@ -24481,7 +24476,6 @@ payload:
   - '+.gw66.vip'
   - '+.gw8888.com'
   - '+.gwamcc.com'
-  - '+.gwapi.net'
   - '+.gwauto.com'
   - '+.gwclouds.net'
   - '+.gwdang.com'
@@ -24978,7 +24972,6 @@ payload:
   - '+.haimacloud.com'
   - '+.haimawan.com'
   - '+.haimi.com'
-  - '+.haiming-cn.com'
   - '+.haimini.com'
   - '+.haina.com'
   - '+.hainachuan.org'
@@ -25024,6 +25017,7 @@ payload:
   - '+.haitaolab.com'
   - '+.haitaopd.com'
   - '+.haitaoqq.com'
+  - '+.haitaoshen.com'
   - '+.haitaotong.com'
   - '+.haitaozu.org'
   - '+.haitianhome.com'
@@ -27969,7 +27963,6 @@ payload:
   - '+.huolug.com'
   - '+.huomakeji.com'
   - '+.huomao.com'
-  - '+.huomaow.com'
   - '+.huomaqun.com'
   - '+.huoming.com'
   - '+.huopinyuan.com'
@@ -30271,7 +30264,6 @@ payload:
   - '+.itxinwen.com'
   - '+.itxm.net'
   - '+.itxst.com'
-  - '+.itxuexi.com'
   - '+.itxueyuan.com'
   - '+.itxueyuan.org'
   - '+.itxuye.com'
@@ -30443,7 +30435,6 @@ payload:
   - '+.iyoowi.com'
   - '+.iyoucai.com'
   - '+.iyoudui.com'
-  - '+.iyouguoo.com'
   - '+.iyouhun.com'
   - '+.iyoujia.com'
   - '+.iyoujiao.net'
@@ -31968,6 +31959,7 @@ payload:
   - '+.jn001.com'
   - '+.jn123456.com'
   - '+.jn1535.com'
+  - '+.jn6beq.xyz'
   - '+.jnbbbyy.com'
   - '+.jnbnzk.com'
   - '+.jncarw.com'
@@ -32617,7 +32609,6 @@ payload:
   - '+.jussevent.com'
   - '+.jusstickets.com'
   - '+.just4coding.com'
-  - '+.just4fun.ml'
   - '+.just4fun.site'
   - '+.just998.com'
   - '+.justalkcloud.com'
@@ -33049,7 +33040,6 @@ payload:
   - '+.kamidm.com'
   - '+.kamidox.com'
   - '+.kamopos.com'
-  - '+.kan.cc'
   - '+.kan0512.com'
   - '+.kan300.com'
   - '+.kanbaobei.com'
@@ -33647,7 +33637,6 @@ payload:
   - '+.kkjk.com'
   - '+.kkk5.com'
   - '+.kkkd.com'
-  - '+.kkkkba.com'
   - '+.kkkwww.com'
   - '+.kklishi.com'
   - '+.kklxj.com'
@@ -36387,7 +36376,6 @@ payload:
   - '+.loveniwed.com'
   - '+.loveota.com'
   - '+.lovepd.com'
-  - '+.loveqindy.com'
   - '+.loverili.com'
   - '+.lovesec.com'
   - '+.lovesoo.org'
@@ -36505,6 +36493,7 @@ payload:
   - '+.lszp.cc'
   - '+.lt-tree.com'
   - '+.lt-uv.com'
+  - '+.lt301.sbs'
   - '+.lt3c.com'
   - '+.ltaaa.com'
   - '+.ltaaa.net'
@@ -38638,7 +38627,6 @@ payload:
   - '+.mobawan.com'
   - '+.mobayke.com'
   - '+.mobayx.com'
-  - '+.mobcastlead.com'
   - '+.mobcent.com'
   - '+.mobcloud.mobi'
   - '+.mobdatas.com'
@@ -41816,11 +41804,13 @@ payload:
   - '+.pctutu.com'
   - '+.pctutu.net'
   - '+.pctvx.com'
+  - '+.pcuois.com'
   - '+.pcviva.com'
   - '+.pcw365.com'
   - '+.pcwenti.com'
   - '+.pcwgu.com'
   - '+.pcwl.com'
+  - '+.pcwolke.com'
   - '+.pcyangguangban.com'
   - '+.pd-sts.com'
   - '+.pd120.com'
@@ -42453,6 +42443,7 @@ payload:
   - '+.pnwww.com'
   - '+.pnxs.com'
   - '+.pnzpw.com'
+  - '+.po.co'
   - '+.pobaby.net'
   - '+.pobasoft.com'
   - '+.pobiji001.com'
@@ -44130,7 +44121,6 @@ payload:
   - '+.qtlglb.com'
   - '+.qtlglb.info'
   - '+.qtlgslbcn.info'
-  - '+.qtluyuan.com'
   - '+.qtmojo.com'
   - '+.qtonghua.com'
   - '+.qtrun.com'
@@ -48874,7 +48864,6 @@ payload:
   - '+.stage3rd.com'
   - '+.stajy.com'
   - '+.standardshop.net'
-  - '+.star-village-ent.com'
   - '+.star1024.com'
   - '+.star365.com'
   - '+.star7game.com'
@@ -49644,6 +49633,7 @@ payload:
   - '+.syue.com'
   - '+.sywg.com'
   - '+.sywgy.com'
+  - '+.sywtqc.com'
   - '+.syxb.com'
   - '+.syxwang.com'
   - '+.syxwnet.com'
@@ -50344,6 +50334,7 @@ payload:
   - '+.tbt.cc'
   - '+.tburl.in'
   - '+.tburl.net'
+  - '+.tbuser.com'
   - '+.tbw-fuzhuang.com'
   - '+.tbw-hufu.com'
   - '+.tbw-xie.com'
@@ -50846,7 +50837,6 @@ payload:
   - '+.tianjinwe.com'
   - '+.tiankong.com'
   - '+.tiankong.info'
-  - '+.tiankonguse.com'
   - '+.tianlaiedu.com'
   - '+.tianlaikge.com'
   - '+.tianlan.net'
@@ -51513,6 +51503,7 @@ payload:
   - '+.topys.com'
   - '+.topzj.com'
   - '+.torovo.com'
+  - '+.tosenscredit.com'
   - '+.toshiba-gtbs.com'
   - '+.toshiba-semicon-storage.com'
   - '+.toshiba-thpc.com'
@@ -52372,7 +52363,6 @@ payload:
   - '+.tz-dsp.com'
   - '+.tz-wf.com'
   - '+.tz.app'
-  - '+.tz089.com'
   - '+.tz121.com'
   - '+.tz12306.com'
   - '+.tz1288.com'
@@ -53067,7 +53057,6 @@ payload:
   - '+.uuudo.com'
   - '+.uuuo.com'
   - '+.uuutu.com'
-  - '+.uuuxsw.com'
   - '+.uuvisa.com'
   - '+.uuvps.com'
   - '+.uuwego.net'
@@ -53200,7 +53189,6 @@ payload:
   - '+.vance-commerce.com'
   - '+.vanch.net'
   - '+.vanchhandheld.com'
-  - '+.vanchiot.com'
   - '+.vanchip.com'
   - '+.vanchiptech.com'
   - '+.vanchu.com'
@@ -53859,7 +53847,6 @@ payload:
   - '+.w3cfuns.com'
   - '+.w3chtml.com'
   - '+.w3cjava.com'
-  - '+.w3cplus.com'
   - '+.w3cschool.cc'
   - '+.w3cshare.com'
   - '+.w3ctalk.com'
@@ -56846,7 +56833,6 @@ payload:
   - '+.xdxialingying.com'
   - '+.xdxmwang.com'
   - '+.xdxx.ink'
-  - '+.xdyqw.com'
   - '+.xedaojia.com'
   - '+.xedaojia.net'
   - '+.xeeee.net'
@@ -58274,7 +58260,6 @@ payload:
   - '+.xmmtoys.com'
   - '+.xmnjdwx.com'
   - '+.xmnovel.com'
-  - '+.xmodelmall.com'
   - '+.xmonecode.com'
   - '+.xmos.tv'
   - '+.xmpcba.com'
@@ -58766,6 +58751,7 @@ payload:
   - '+.xunwei.org'
   - '+.xunwei.tm'
   - '+.xunxi.com'
+  - '+.xunxiang.site'
   - '+.xunxu.com'
   - '+.xunyangzaixian.com'
   - '+.xunyixia.com'
@@ -59526,7 +59512,6 @@ payload:
   - '+.yemayun.com'
   - '+.yemeihuoguo.com'
   - '+.yemet.com'
-  - '+.yemi.me'
   - '+.yeolar.com'
   - '+.yeoner.com'
   - '+.yeree.com'
@@ -60298,6 +60283,7 @@ payload:
   - '+.yk08.com'
   - '+.yk211.com'
   - '+.ykccn.com'
+  - '+.ykchicheng.com'
   - '+.ykclass.com'
   - '+.ykdgd.com'
   - '+.ykdmsy.com'
@@ -62190,6 +62176,7 @@ payload:
   - '+.zdfx.net'
   - '+.zdh168.com'
   - '+.zdhaitao.com'
+  - '+.zdhaitao.net'
   - '+.zdhnayr.com'
   - '+.zdic.net'
   - '+.zdkqyy.com'
@@ -63459,6 +63446,7 @@ payload:
   - '+.zidanduanxin.com'
   - '+.zidanduanxin.net'
   - '+.zidian8.com'
+  - '+.zidianwang.com'
   - '+.zidoo.tv'
   - '+.zidootv.com'
   - '+.zifandiaosu.com'
@@ -63603,7 +63591,6 @@ payload:
   - '+.zizisi.com'
   - '+.zizizizizi.com'
   - '+.zizzs.com'
-  - '+.zj-hhcy.com'
   - '+.zj-idc.com'
   - '+.zj.com'
   - '+.zj01.com'
@@ -63831,6 +63818,7 @@ payload:
   - '+.zlbaba.com'
   - '+.zlca.org'
   - '+.zlcool.com'
+  - '+.zle.com'
   - '+.zlfedu.com'
   - '+.zlfind.com'
   - '+.zlg.com'
