--- a/directbak.yaml
+++ b/directbak.yaml
@@ -99,7 +99,6 @@ payload:
   - '+.01p.com'
   - '+.01retail.com'
   - '+.01rv.com'
-  - '+.01tao.com'
   - '+.01teacher.com'
   - '+.01tingshu.com'
   - '+.01w.com'
@@ -437,7 +436,6 @@ payload:
   - '+.07073sy.com'
   - '+.07073vr.com'
   - '+.0712fang.com'
-  - '+.0712zpw.com'
   - '+.0713fang.com'
   - '+.0715fc.com'
   - '+.0715rc.com'
@@ -838,7 +836,6 @@ payload:
   - '+.10vps.com'
   - '+.10yan.com'
   - '+.10yougame.com'
-  - '+.10zk.com'
   - '+.110.com'
   - '+.11000.vip'
   - '+.11000011.com'
@@ -1337,7 +1334,6 @@ payload:
   - '+.168chaogu.com'
   - '+.168dc.com'
   - '+.168dns.com'
-  - '+.168f.info'
   - '+.168hs.com'
   - '+.168job.com'
   - '+.168kk.com'
@@ -1922,7 +1918,6 @@ payload:
   - '+.202wan.com'
   - '+.2048sj.com'
   - '+.205.com'
-  - '+.206dy.com'
   - '+.2080ly.com'
   - '+.2088062.com'
   - '+.2088063.com'
@@ -2397,7 +2392,6 @@ payload:
   - '+.2ktq.com'
   - '+.2ktvb.com'
   - '+.2kxs.org'
-  - '+.2kz.net'
   - '+.2lian.com'
   - '+.2lieqi.com'
   - '+.2loveyou.com'
@@ -2494,7 +2488,6 @@ payload:
   - '+.315sc.org'
   - '+.315tech.com'
   - '+.315wangdai.com'
-  - '+.315weishi.com'
   - '+.315z.net'
   - '+.315zw.com'
   - '+.31609.com'
@@ -3138,6 +3131,7 @@ payload:
   - '+.3dllc.cc'
   - '+.3dllc.com'
   - '+.3dly.com'
+  - '+.3dm.pw'
   - '+.3dmax8.com'
   - '+.3dmaxvip.com'
   - '+.3dmgame.com'
@@ -6109,6 +6103,7 @@ payload:
   - '+.88520.cc'
   - '+.885210.net'
   - '+.8855.org'
+  - '+.885533.com'
   - '+.885741.com'
   - '+.88582.com'
   - '+.8858a.com'
@@ -7083,7 +7078,6 @@ payload:
   - '+.9zhen.com'
   - '+.9zhitx.com'
   - '+.9zjob.com'
-  - '+.9zonline.com'
   - '+.9zx.com'
   - '+.a-du.net'
   - '+.a-hospital.com'
@@ -7573,7 +7567,6 @@ payload:
   - '+.ahdsez.com'
   - '+.ahdzfp.com'
   - '+.aheading.com'
-  - '+.ahfbz.com'
   - '+.ahfdcb.com'
   - '+.ahfensitong.com'
   - '+.ahfgb.com'
@@ -7629,6 +7622,7 @@ payload:
   - '+.ahudows.com'
   - '+.ahugeship.com'
   - '+.ahuyi.com'
+  - '+.ahwkdz.com'
   - '+.ahwwnews.com'
   - '+.ahwxcs.com'
   - '+.ahxwkj.com'
@@ -8762,6 +8756,7 @@ payload:
   - '+.apkrj.com'
   - '+.apkyx.com'
   - '+.apkzu.com'
+  - '+.aplaybox.com'
   - '+.aplum-inc.com'
   - '+.aplum.com'
   - '+.apluscap.com'
@@ -9154,7 +9149,6 @@ payload:
   - '+.atool.org'
   - '+.atool9.com'
   - '+.atoolbox.net'
-  - '+.atop.fun'
   - '+.atpanel.com'
   - '+.atstudy.com'
   - '+.atsws.com'
@@ -9209,7 +9203,6 @@ payload:
   - '+.auto-mooc.com'
   - '+.auto-purify.com'
   - '+.auto-wo.com'
-  - '+.auto000.com'
   - '+.auto18.com'
   - '+.auto318.com'
   - '+.auto328.com'
@@ -9369,7 +9362,6 @@ payload:
   - '+.azooo.com'
   - '+.azoyacdn.com'
   - '+.azoyagroup.com'
-  - '+.aztsg.com'
   - '+.azuretouch.net'
   - '+.azurew.com'
   - '+.azureyun.com'
@@ -9386,7 +9378,6 @@ payload:
   - '+.b178.com'
   - '+.b1bj.com'
   - '+.b1qg.com'
-  - '+.b1uew01f.net'
   - '+.b23.tv'
   - '+.b2b-builder.com'
   - '+.b2b.biz'
@@ -9656,7 +9647,6 @@ payload:
   - '+.baixingjd.com'
   - '+.baixingmall.com'
   - '+.baixingzixun.com'
-  - '+.baixiong.online'
   - '+.baixiongz.com'
   - '+.baixiu.org'
   - '+.baiyangwang.com'
@@ -11678,7 +11668,6 @@ payload:
   - '+.btbt.tv'
   - '+.btc114.com'
   - '+.btc116.com'
-  - '+.btc1212.com'
   - '+.btc123.com'
   - '+.btc17.com'
   - '+.btc38.com'
@@ -11699,7 +11688,6 @@ payload:
   - '+.btgame.com'
   - '+.btgame01.com'
   - '+.btgang.com'
-  - '+.btglotto.com'
   - '+.bthhotels.com'
   - '+.bthlt.com'
   - '+.bthuifu.com'
@@ -12555,7 +12543,6 @@ payload:
   - '+.cchicc.com'
   - '+.cchorse.com'
   - '+.cchorse.net'
-  - '+.ccian.com'
   - '+.cciatv.com'
   - '+.ccic.com'
   - '+.ccic2.com'
@@ -13148,7 +13135,6 @@ payload:
   - '+.cgahz.com'
   - '+.cgangs.com'
   - '+.cgartt.com'
-  - '+.cgbolo.com'
   - '+.cgboo.com'
   - '+.cgcountry.com'
   - '+.cgdeuvip.com'
@@ -13270,7 +13256,6 @@ payload:
   - '+.chamiji.com'
   - '+.champconsult.com'
   - '+.champhier.com'
-  - '+.champzee.com'
   - '+.chance-ad.com'
   - '+.chandao.net'
   - '+.chandashi.com'
@@ -13373,7 +13358,6 @@ payload:
   - '+.chaoshen.cc'
   - '+.chaoshengboliuliangji.com'
   - '+.chaoskeh.com'
-  - '+.chaosuduokai.com'
   - '+.chaosw.com'
   - '+.chaov.com'
   - '+.chaowanjoy.com'
@@ -14140,7 +14124,6 @@ payload:
   - '+.chinaopticsvalley.com'
   - '+.chinaore.com'
   - '+.chinaosx.com'
-  - '+.chinaosx.net'
   - '+.chinaott.net'
   - '+.chinapastel.com'
   - '+.chinapay.com'
@@ -15744,7 +15727,6 @@ payload:
   - '+.coatingol.com'
   - '+.cobenet.com'
   - '+.cocas.cc'
-  - '+.cocccc.vip'
   - '+.coccccc.cc'
   - '+.cocimg.com'
   - '+.coco413.com'
@@ -16029,7 +16011,6 @@ payload:
   - '+.coozhi.com'
   - '+.cop.cdnetworks.com'
   - '+.copyedu.com'
-  - '+.copyfuture.com'
   - '+.copymanga.info'
   - '+.copymanga.net'
   - '+.copymanga.org'
@@ -16411,9 +16392,7 @@ payload:
   - '+.csapa.org'
   - '+.csaspx.com'
   - '+.csau.com'
-  - '+.csbidding.com'
   - '+.csbnj.net'
-  - '+.csc-he.com'
   - '+.csc108.com'
   - '+.csc86.com'
   - '+.cscan.co'
@@ -16511,7 +16490,6 @@ payload:
   - '+.cssmagic.net'
   - '+.cssmoban.com'
   - '+.cssmxx.com'
-  - '+.cssq33.com'
   - '+.cssqt.com'
   - '+.csstoday.net'
   - '+.cssxt.com'
@@ -16821,7 +16799,6 @@ payload:
   - '+.cycnet.com'
   - '+.cycoi.com'
   - '+.cycoo.com'
-  - '+.cydf.com'
   - '+.cydiakk.com'
   - '+.cydiami.com'
   - '+.cydow.com'
@@ -21424,7 +21401,6 @@ payload:
   - '+.fei123.com'
   - '+.fei580.com'
   - '+.feiair.com'
-  - '+.feibaojianshen.com'
   - '+.feibaokeji.com'
   - '+.feibisi.com'
   - '+.feibisi.org'
@@ -21816,7 +21792,6 @@ payload:
   - '+.fisherac.com'
   - '+.fishfay.com'
   - '+.fishing-sinkers.com'
-  - '+.fishingbar.net'
   - '+.fishingjoy.com'
   - '+.fishings.biz'
   - '+.fishlee.net'
@@ -21913,7 +21888,6 @@ payload:
   - '+.fl168.com'
   - '+.fl365.com'
   - '+.fl5.co'
-  - '+.flac.today'
   - '+.flachina.com'
   - '+.flacro.me'
   - '+.flamesky.org'
@@ -22532,7 +22506,6 @@ payload:
   - '+.fxlbb.com'
   - '+.fxltsbl.com'
   - '+.fxm.so'
-  - '+.fxmoe.com'
   - '+.fxo2opt.com'
   - '+.fxpan.com'
   - '+.fxsw.net'
@@ -22608,7 +22581,6 @@ payload:
   - '+.fzf.com'
   - '+.fzfzjx.com'
   - '+.fzg360.com'
-  - '+.fzita.com'
   - '+.fzithome.com'
   - '+.fzjxw.com'
   - '+.fzl7.com'
@@ -22654,7 +22626,6 @@ payload:
   - '+.g3user.com'
   - '+.g5h4.com'
   - '+.g72.com'
-  - '+.g7430.com'
   - '+.g77775555.com'
   - '+.g77776666.com'
   - '+.g80mx.com'
@@ -22862,7 +22833,6 @@ payload:
   - '+.gaohr.com'
   - '+.gaoimg.com'
   - '+.gaoji.ren'
-  - '+.gaojiaju.net'
   - '+.gaojianli.me'
   - '+.gaojie.com'
   - '+.gaojihealth.com'
@@ -24093,7 +24063,6 @@ payload:
   - '+.gsi24.com'
   - '+.gsicpa.net'
   - '+.gsjie.com'
-  - '+.gsjpy.com'
   - '+.gsjtky.com'
   - '+.gsjy.net'
   - '+.gsktraining.com'
@@ -24380,7 +24349,6 @@ payload:
   - '+.guofenchaxun.com'
   - '+.guofenchaxun.net'
   - '+.guoguo-app.com'
-  - '+.guoguofen.com'
   - '+.guohanlawfirm.com'
   - '+.guohead.com'
   - '+.guohexinxiang.com'
@@ -24817,7 +24785,6 @@ payload:
   - '+.gzzy05.com'
   - '+.h-college.com'
   - '+.h-heguo.com'
-  - '+.h-sea.net'
   - '+.h-shgroup.com'
   - '+.h-ui.net'
   - '+.h-world.com'
@@ -27352,7 +27319,6 @@ payload:
   - '+.htranslate.com'
   - '+.htsc.com'
   - '+.htsec.com'
-  - '+.htsgh5.com'
   - '+.htstzm.com'
   - '+.httingshu.com'
   - '+.httpcanary.com'
@@ -27460,7 +27426,6 @@ payload:
   - '+.huamanlou.cc'
   - '+.huameiyuezi.com'
   - '+.huami.com'
-  - '+.huamoe.com'
   - '+.huan-tai.com'
   - '+.huan.tv'
   - '+.huanbao-world.com'
@@ -27795,7 +27760,6 @@ payload:
   - '+.huing.net'
   - '+.huion.com'
   - '+.huiqianbian.com'
-  - '+.huiqiangkeji.com'
   - '+.huiqudsp.com'
   - '+.huiris.com'
   - '+.huirixiao.com'
@@ -29137,7 +29101,6 @@ payload:
   - '+.ihongma.com'
   - '+.ihongpan.com'
   - '+.ihongqiqu.com'
-  - '+.ihongyou.com'
   - '+.ihonker.org'
   - '+.ihou.com'
   - '+.ihr360.com'
@@ -30242,7 +30205,6 @@ payload:
   - '+.itoutiao.co'
   - '+.itoutiaoimg.com'
   - '+.itoutiaostatic.com'
-  - '+.itouxian.com'
   - '+.itouzi.com'
   - '+.itoyfx.com'
   - '+.itpaidui.com'
@@ -31667,7 +31629,6 @@ payload:
   - '+.jitongtianxia.com'
   - '+.jitu5.com'
   - '+.jitucdn.com'
-  - '+.jitudisk.com'
   - '+.jituofuture.com'
   - '+.jituwang.com'
   - '+.jiubuhua.com'
@@ -34256,7 +34217,6 @@ payload:
   - '+.kutj.com'
   - '+.kutongji.com'
   - '+.kutoo8.com'
-  - '+.kutsg.com'
   - '+.kutuan.com'
   - '+.kuuke.com'
   - '+.kuwan8.com'
@@ -35579,7 +35539,6 @@ payload:
   - '+.lingaoren.com'
   - '+.lingb.net'
   - '+.lingbao-e.com'
-  - '+.lingcaixinyuan.com'
   - '+.lingd.cc'
   - '+.lingd.com'
   - '+.lingdai.name'
@@ -36711,7 +36670,6 @@ payload:
   - '+.luxuqing.com'
   - '+.luxury-theme.com'
   - '+.luyanghui.com'
-  - '+.luyewooden.com'
   - '+.luyinla.com'
   - '+.luyouqi.com'
   - '+.luyouwang.com'
@@ -36849,7 +36807,6 @@ payload:
   - '+.lxybaike.com'
   - '+.lxyes.com'
   - '+.lxyl539.com'
-  - '+.ly-52zx.com'
   - '+.ly-sky.com'
   - '+.ly.com'
   - '+.ly200-cdn.com'
@@ -37070,7 +37027,6 @@ payload:
   - '+.mafengwo.ink'
   - '+.mafengwo.net'
   - '+.maff.com'
-  - '+.mafutian.net'
   - '+.mag10000.com'
   - '+.mag998.com'
   - '+.magcloud.net'
@@ -37544,7 +37500,6 @@ payload:
   - '+.mbldbb.com'
   - '+.mbokee.com'
   - '+.mbsky.com'
-  - '+.mbtsg.com'
   - '+.mbxt.net'
   - '+.mc-ccpit.com'
   - '+.mc-dj.com'
@@ -37795,7 +37750,6 @@ payload:
   - '+.meirong.net'
   - '+.meirongshanghai.com'
   - '+.meisaitu.com'
-  - '+.meisfuture.com'
   - '+.meishai.com'
   - '+.meishanren.com'
   - '+.meishe-app.com'
@@ -37836,7 +37790,6 @@ payload:
   - '+.meiwenting.com'
   - '+.meixie.com'
   - '+.meixiong5.com'
-  - '+.meixueyuan.com'
   - '+.meiyaapp.com'
   - '+.meiyan.com'
   - '+.meiyedana.com'
@@ -37957,7 +37910,6 @@ payload:
   - '+.metro-3d.com'
   - '+.metroer.com'
   - '+.metrofastpass.com'
-  - '+.metrolife.mobi'
   - '+.metstr.com'
   - '+.metword.co'
   - '+.mew.fun'
@@ -38069,7 +38021,6 @@ payload:
   - '+.mianhuatang.cc'
   - '+.mianhuatang.la'
   - '+.mianjue.com'
-  - '+.mianjuvip.com'
   - '+.mianshi365.com'
   - '+.mianshui365.com'
   - '+.miantiao.me'
@@ -38606,7 +38557,6 @@ payload:
   - '+.mmtrixcnc.com'
   - '+.mmtrixcnet.com'
   - '+.mmtrixopt.com'
-  - '+.mmtsg.com'
   - '+.mmuaa.com'
   - '+.mmww.com'
   - '+.mmxiaowu.com'
@@ -39998,7 +39948,6 @@ payload:
   - '+.newdun.com'
   - '+.newdun.net'
   - '+.newer2001.com'
-  - '+.newfavor.net'
   - '+.newhopeagri.com'
   - '+.newhopegroup.com'
   - '+.newhtml.net'
@@ -40326,7 +40275,6 @@ payload:
   - '+.njqxrc.com'
   - '+.njrc365.com'
   - '+.njrx.cc'
-  - '+.njsd-china.org'
   - '+.njshengyuanli.com'
   - '+.njsjz.com'
   - '+.njskps.com'
@@ -40720,7 +40668,6 @@ payload:
   - '+.nybai.com'
   - '+.nybaidu.net'
   - '+.nyckidsclub.com'
-  - '+.nyist.net'
   - '+.nync.com'
   - '+.nypd520.com'
   - '+.nyq.ink'
@@ -41022,7 +40969,6 @@ payload:
   - '+.onche.net'
   - '+.oncity.cc'
   - '+.one-all.com'
-  - '+.one-lab.net'
   - '+.one918.com'
   - '+.onealert.com'
   - '+.oneapm.com'
@@ -42093,7 +42039,6 @@ payload:
   - '+.phpweb.net'
   - '+.phpweblog.net'
   - '+.phpxs.com'
-  - '+.phpxy.com'
   - '+.phpyuan.com'
   - '+.phpyun.com'
   - '+.phys.net'
@@ -43116,14 +43061,12 @@ payload:
   - '+.qdnsyh.com'
   - '+.qdooc.com'
   - '+.qdpdjx.com'
-  - '+.qdppc.com'
   - '+.qdpr.com'
   - '+.qdqihang.com'
   - '+.qdqunweite.com'
   - '+.qdsay.com'
   - '+.qdsbx.com'
   - '+.qdshitangchengbao.com'
-  - '+.qdsntsg.com'
   - '+.qdsxtkj.com'
   - '+.qdsysj.com'
   - '+.qdtech.ai'
@@ -43485,7 +43428,6 @@ payload:
   - '+.qijuan.com'
   - '+.qijucn.com'
   - '+.qikan.com'
-  - '+.qikanol.com'
   - '+.qikanw.com'
   - '+.qikegu.com'
   - '+.qikoo.com'
@@ -43887,7 +43829,6 @@ payload:
   - '+.qmacro.com'
   - '+.qmail.com'
   - '+.qmango.com'
-  - '+.qmbk.com'
   - '+.qmcaifu.com'
   - '+.qmconfig.com'
   - '+.qmei.me'
@@ -44352,7 +44293,6 @@ payload:
   - '+.qunmi.vip'
   - '+.qunniao.com'
   - '+.qunonnet.com'
-  - '+.qunqun.mobi'
   - '+.qunsou.co'
   - '+.quntuishou.com'
   - '+.qunxingvc.com'
@@ -48780,7 +48720,6 @@ payload:
   - '+.srgow.com'
   - '+.srichina.org'
   - '+.sritsoft.com'
-  - '+.srjxj.com'
   - '+.srm.dji.com'
   - '+.srrsh.com'
   - '+.srrtvu.com'
@@ -49865,7 +49804,6 @@ payload:
   - '+.szsmk.com'
   - '+.szsq.net'
   - '+.szsunlaser.com'
-  - '+.szswt.net'
   - '+.sztaijier.com'
   - '+.sztalent.org'
   - '+.sztara.com'
@@ -50140,7 +50078,6 @@ payload:
   - '+.tanrd.com'
   - '+.tanshudata.com'
   - '+.tansoole.com'
-  - '+.tansuotv.com'
   - '+.tantanapp.com'
   - '+.tantu.com'
   - '+.tantu.info'
@@ -50723,7 +50660,6 @@ payload:
   - '+.thefastfile.com'
   - '+.thefastimg.com'
   - '+.thefatherofsalmon.com'
-  - '+.thefifthera.com'
   - '+.thegbdc.com'
   - '+.thegiac.com'
   - '+.theguangdong.com'
@@ -51115,7 +51051,6 @@ payload:
   - '+.tiwb.com'
   - '+.tixa.com'
   - '+.tixaapp.com'
-  - '+.tixaclub.net'
   - '+.tiye.me'
   - '+.tiyeji.com'
   - '+.tiyep.com'
@@ -51723,7 +51658,6 @@ payload:
   - '+.trhos.com'
   - '+.trhui.com'
   - '+.trinitigame.com'
-  - '+.trinitigames.net'
   - '+.trioisobardev.com'
   - '+.trip8080.com'
   - '+.tripbaba.com'
@@ -54036,7 +53970,6 @@ payload:
   - '+.wangdaicaifu.com'
   - '+.wangdaidongfang.com'
   - '+.wangdaijiamen.com'
-  - '+.wangdaijin.com'
   - '+.wangdaileida.com'
   - '+.wangdalao.com'
   - '+.wangdali.net'
@@ -54514,7 +54447,6 @@ payload:
   - '+.weibo.co'
   - '+.weibo.com'
   - '+.weibocdn.com'
-  - '+.weibodangan.com'
   - '+.weibohelper.com'
   - '+.weiboi.com'
   - '+.weibopay.com'
@@ -55380,7 +55312,6 @@ payload:
   - '+.win71234.com'
   - '+.win732.com'
   - '+.win789.com'
-  - '+.win7999.com'
   - '+.win7china.com'
   - '+.win7en.com'
   - '+.win7qijian.com'
@@ -56383,7 +56314,6 @@ payload:
   - '+.www4.djicdn.com'
   - '+.www48-365365.com'
   - '+.www5.djicdn.com'
-  - '+.www78966.cc'
   - '+.www8.hp.com'
   - '+.wwwatch.in'
   - '+.wwwbuild.net'
@@ -56530,7 +56460,6 @@ payload:
   - '+.wzdai.com'
   - '+.wzdjy.com'
   - '+.wzdlqj.com'
-  - '+.wzdress.com'
   - '+.wzdsb.net'
   - '+.wzdy.xyz'
   - '+.wzexe.com'
@@ -56886,7 +56815,6 @@ payload:
   - '+.xesv5.com'
   - '+.xet.tech'
   - '+.xetimes.com'
-  - '+.xetsg.com'
   - '+.xevd.co'
   - '+.xevddy.com'
   - '+.xeylon.com'
@@ -57075,7 +57003,6 @@ payload:
   - '+.xiangguo.com'
   - '+.xiangguohe.com'
   - '+.xiangha.com'
-  - '+.xianghui8.com'
   - '+.xianghunet.com'
   - '+.xianghus.com'
   - '+.xiangkanwang.com'
@@ -57724,7 +57651,6 @@ payload:
   - '+.xingqiu.tv'
   - '+.xingqiu520.com'
   - '+.xingqu11.com'
-  - '+.xingquke.com'
   - '+.xingren.com'
   - '+.xingrongn.com'
   - '+.xingse.net'
@@ -57769,7 +57695,6 @@ payload:
   - '+.xinhaolian.com'
   - '+.xinhaoqi.net'
   - '+.xinhay.com'
-  - '+.xinhexinli.com'
   - '+.xinhongru.com'
   - '+.xinhtz.com'
   - '+.xinhua-news.com'
@@ -58807,7 +58732,6 @@ payload:
   - '+.xuzhoujob.com'
   - '+.xvista.com'
   - '+.xvv.cc'
-  - '+.xw-china.com'
   - '+.xw1806.com'
   - '+.xw360.com'
   - '+.xwadv.com'
@@ -59417,7 +59341,6 @@ payload:
   - '+.yct-tec.com'
   - '+.ycty.org'
   - '+.ycwalker.com'
-  - '+.ycwanju.com'
   - '+.ycwb.com'
   - '+.ycwhys.com'
   - '+.ycxfgroup.com'
@@ -59520,7 +59443,6 @@ payload:
   - '+.yegong.net'
   - '+.yegoo.com'
   - '+.yehaoqian.com'
-  - '+.yehetang.com'
   - '+.yeidc.com'
   - '+.yeidc.net'
   - '+.yejienet.com'
@@ -60021,7 +59943,6 @@ payload:
   - '+.yinjietd.com'
   - '+.yinka.co'
   - '+.yinker.com'
-  - '+.yinlei.net'
   - '+.yinliuba.com'
   - '+.yinmishu.com'
   - '+.yinongtouzi.com'
@@ -60476,7 +60397,6 @@ payload:
   - '+.ynshijian.com'
   - '+.ynsjg.com'
   - '+.ynteng.com'
-  - '+.yntsg.com'
   - '+.ynwin.com'
   - '+.ynxdfpr.com'
   - '+.ynxr.com'
@@ -61145,7 +61065,6 @@ payload:
   - '+.yuanchengxiezuo.com'
   - '+.yuandi.com'
   - '+.yuandiancredit.com'
-  - '+.yuandongjixie.com'
   - '+.yuanfeng021.com'
   - '+.yuanfengyazhu.net'
   - '+.yuanfr.com'
@@ -61320,7 +61239,6 @@ payload:
   - '+.yuike.com'
   - '+.yujia.com'
   - '+.yujiahui.com'
-  - '+.yujie.pro'
   - '+.yujunjie.com'
   - '+.yujunren.com'
   - '+.yujzw.com'
@@ -61378,7 +61296,6 @@ payload:
   - '+.yunaq.com'
   - '+.yunarm.com'
   - '+.yunaw.com'
-  - '+.yunba.io'
   - '+.yunban.com'
   - '+.yunbang.net'
   - '+.yunbaoriji.com'
@@ -61688,14 +61605,12 @@ payload:
   - '+.yuzhike.com'
   - '+.yuzhong.net'
   - '+.yuzhongxxw.com'
-  - '+.yuzhoutuofu.com'
   - '+.yuzhouwan.com'
   - '+.yuzhua.com'
   - '+.yuzhuagame.com'
   - '+.yuzhuan.com'
   - '+.yuzhulin.com'
   - '+.yuzi.net'
-  - '+.yuzunzhi.com'
   - '+.yuzvf.com'
   - '+.yveqi.com'
   - '+.yvv.in'
@@ -62195,7 +62110,6 @@ payload:
   - '+.zd200572.com'
   - '+.zdao.com'
   - '+.zdaye.com'
-  - '+.zdb.io'
   - '+.zdcj.net'
   - '+.zdcjw18.com'
   - '+.zdctid.com'
@@ -62541,7 +62455,6 @@ payload:
   - '+.zhanggaoyuan.com'
   - '+.zhangge.net'
   - '+.zhanggee.com'
-  - '+.zhanghaijun.com'
   - '+.zhanghongliang.com'
   - '+.zhanghuanglong.com'
   - '+.zhangjiaoshou.net'
@@ -63413,7 +63326,6 @@ payload:
   - '+.zhutile.com'
   - '+.zhutix.com'
   - '+.zhutix.net'
-  - '+.zhutizhijia.net'
   - '+.zhutools.com'
   - '+.zhutou.com'
   - '+.zhutousan.net'
@@ -63428,7 +63340,6 @@ payload:
   - '+.zhuye.kim'
   - '+.zhuyeshouhushen.com'
   - '+.zhuyitai.com'
-  - '+.zhuyixie.com'
   - '+.zhuyst.cc'
   - '+.zhuyunfeng.com'
   - '+.zhuzhai.com'
@@ -63829,7 +63740,6 @@ payload:
   - '+.zkteco.xin'
   - '+.zktimecube.com'
   - '+.zktools.net'
-  - '+.zktsg.com'
   - '+.zktw.com'
   - '+.zku.net'
   - '+.zkunet.com'
