--- a/directbak.yaml
+++ b/directbak.yaml
@@ -5366,7 +5366,6 @@ payload:
   - '+.6say.com'
   - '+.6sfg.com'
   - '+.6sq.net'
-  - '+.6stmmo.com'
   - '+.6t12.com'
   - '+.6tennis.com'
   - '+.6thhosp.com'
@@ -13290,7 +13289,6 @@ payload:
   - '+.changpingquzhongxiyijieheyiyuan.com'
   - '+.changpu3d.com'
   - '+.changqingshu.net'
-  - '+.changrongwang.com'
   - '+.changsha-show.com'
   - '+.changshabdc.com'
   - '+.changshang.com'
@@ -13298,6 +13296,7 @@ payload:
   - '+.changtong2800.com'
   - '+.changtounet.com'
   - '+.changtu.com'
+  - '+.changwankeji.com'
   - '+.changxie.com'
   - '+.changxingyun.com'
   - '+.changyan.com'
@@ -18257,7 +18256,6 @@ payload:
   - '+.dingtangzqx.com'
   - '+.dingteam.com'
   - '+.dingxiang-inc.com'
-  - '+.dingxin66.com'
   - '+.dingxinhui.com'
   - '+.dingxinwen.com'
   - '+.dingxuewen.com'
@@ -18588,7 +18586,6 @@ payload:
   - '+.dnspood.net'
   - '+.dnsppdd.com'
   - '+.dnsrw.com'
-  - '+.dnss.me'
   - '+.dnss.vip'
   - '+.dnssina.com'
   - '+.dnsurl.net'
@@ -22413,7 +22410,6 @@ payload:
   - '+.funwear.com'
   - '+.funxun.com'
   - '+.funyqq.com'
-  - '+.fuqian.la'
   - '+.fuqiangw.com'
   - '+.furenkeji.com'
   - '+.furongedu.com'
@@ -22549,6 +22545,7 @@ payload:
   - '+.fygame.com'
   - '+.fygdrs.com'
   - '+.fygsoft.com'
+  - '+.fyhapp66.com'
   - '+.fyigou.com'
   - '+.fyjsz.net'
   - '+.fynas.com'
@@ -22566,6 +22563,7 @@ payload:
   - '+.fyvart.com'
   - '+.fywx.cc'
   - '+.fyxfcw.com'
+  - '+.fyxxwb.com'
   - '+.fyyljkgl.com'
   - '+.fyyy.com'
   - '+.fyzku.com'
@@ -23049,7 +23047,6 @@ payload:
   - '+.gdrfyy.com'
   - '+.gds-services.com'
   - '+.gdscse.net'
-  - '+.gdscw.com'
   - '+.gdsdwan.com'
   - '+.gdsincom.com'
   - '+.gdslwl.com'
@@ -24112,6 +24109,7 @@ payload:
   - '+.gtjaqh.com'
   - '+.gtjazg.com'
   - '+.gtk2.com'
+  - '+.gtlpaj.com'
   - '+.gtlrxt.com'
   - '+.gtm-a1b2.com'
   - '+.gtm-a1b3.com'
@@ -29400,6 +29398,7 @@ payload:
   - '+.imgkr.com'
   - '+.imglefeng.com'
   - '+.imglink.win'
+  - '+.imgloc.com'
   - '+.imgo.tv'
   - '+.imgscdn.com'
   - '+.imgse.com'
@@ -30128,7 +30127,6 @@ payload:
   - '+.itetc.org'
   - '+.itexamprep.com'
   - '+.iteye.com'
-  - '+.itfanr.cc'
   - '+.itfans.net'
   - '+.itfeed.com'
   - '+.itfenghui.com'
@@ -30218,7 +30216,6 @@ payload:
   - '+.itpwd.com'
   - '+.itrace.cc'
   - '+.itran.cc'
-  - '+.itren.org'
   - '+.itrid.com'
   - '+.itrip.com'
   - '+.itruelife.com'
@@ -31658,7 +31655,6 @@ payload:
   - '+.jiujiups.com'
   - '+.jiujiuwan.com'
   - '+.jiujiuwj.com'
-  - '+.jiujiuyingshi.com'
   - '+.jiujiuyunhui.com'
   - '+.jiujiuzu.com'
   - '+.jiuku.com'
@@ -32001,7 +31997,6 @@ payload:
   - '+.job9151.com'
   - '+.job98.com'
   - '+.job9981.com'
-  - '+.jobbole.com'
   - '+.jobcdp.com'
   - '+.jobcn.com'
   - '+.jobdeer.com'
@@ -52386,7 +52381,6 @@ payload:
   - '+.u51.com'
   - '+.u520.net'
   - '+.u58.com'
-  - '+.u5h5.com'
   - '+.u5wan.com'
   - '+.u69cn.com'
   - '+.u6u.com'
@@ -55549,6 +55543,7 @@ payload:
   - '+.wlstock.com'
   - '+.wlsvt.com'
   - '+.wltieyaoban.com'
+  - '+.wluotx.com'
   - '+.wlwujie.com'
   - '+.wlxit.com'
   - '+.wlxmall.com'
@@ -58092,7 +58087,6 @@ payload:
   - '+.xker.com'
   - '+.xkhouse.com'
   - '+.xkpx.com'
-  - '+.xkqyfw.com'
   - '+.xksafe.com'
   - '+.xktoupiao.com'
   - '+.xkw.com'
@@ -59571,7 +59565,6 @@ payload:
   - '+.ygo.wiki'
   - '+.ygread.com'
   - '+.ygsdmedia.com'
-  - '+.ygshangjie.com'
   - '+.ygshu.com'
   - '+.ygsoft.com'
   - '+.ygtcpa.com'
@@ -60268,7 +60261,6 @@ payload:
   - '+.ylhh.net'
   - '+.ylhsrsrc.com'
   - '+.ylife9.com'
-  - '+.ylimg.com'
   - '+.yliyun.com'
   - '+.ylizu.com'
   - '+.yljc888.com'
@@ -60990,7 +60982,6 @@ payload:
   - '+.ystinbox.com'
   - '+.ysug.com'
   - '+.ysw365.com'
-  - '+.ysw366.com'
   - '+.ysw68.com'
   - '+.yswebportal.cc'
   - '+.yswh.com'
@@ -64484,6 +64475,7 @@ payload:
   - '+.zytxgame.com'
   - '+.zyucan.com'
   - '+.zyue.com'
+  - '+.zyun.vip'
   - '+.zywjjdw.com'
   - '+.zywjw.com'
   - '+.zywxpress.com'
