--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2215,7 +2215,6 @@ payload:
   - '+.2541.com'
   - '+.254game.com'
   - '+.255616.com'
-  - '+.2556r.com'
   - '+.256app.com'
   - '+.25752.com'
   - '+.258288.com'
@@ -13095,7 +13094,6 @@ payload:
   - '+.cfogc.com'
   - '+.cfpa.pw'
   - '+.cfpsf.com'
-  - '+.cfryny.com'
   - '+.cfsino.com'
   - '+.cfsl2017.com'
   - '+.cftea.com'
@@ -25314,7 +25312,6 @@ payload:
   - '+.haorc.com'
   - '+.haoread.com'
   - '+.haorencai.net'
-  - '+.haorendao.com'
   - '+.haorooms.com'
   - '+.haoseals.com'
   - '+.haosenchina.com'
@@ -27596,6 +27593,7 @@ payload:
   - '+.huazhuanapp.com'
   - '+.huazhucorp.com'
   - '+.huazi55.xyz'
+  - '+.huazirc.com'
   - '+.hubcyts.com'
   - '+.hubei-design.com'
   - '+.hubeibbs.net'
@@ -32186,7 +32184,6 @@ payload:
   - '+.jscdn.host'
   - '+.jsceou.com'
   - '+.jsche.net'
-  - '+.jschengta.com'
   - '+.jschunxing.com'
   - '+.jscj.com'
   - '+.jsclearing.com'
@@ -42487,7 +42484,6 @@ payload:
   - '+.pp6.cc'
   - '+.pp63.com'
   - '+.pp66.cc'
-  - '+.pp70.com'
   - '+.pp8.com'
   - '+.pp9l.com'
   - '+.ppaikd.com'
@@ -43553,7 +43549,6 @@ payload:
   - '+.qinzc.me'
   - '+.qinzhe.com'
   - '+.qinzhou8.com'
-  - '+.qinzi7.com'
   - '+.qinzidna.com'
   - '+.qinziheng.com'
   - '+.qionghaif.com'
@@ -50640,6 +50635,7 @@ payload:
   - '+.thoughtworkers.org'
   - '+.thrbs.com'
   - '+.threadcn.com'
+  - '+.threatbook.net'
   - '+.threegorgestours.com'
   - '+.threeol.com'
   - '+.threetong.com'
@@ -51279,7 +51275,6 @@ payload:
   - '+.tongyi.com'
   - '+.tongyidrying.com'
   - '+.tongyongji.net'
-  - '+.tongyou188.com'
   - '+.tongyuanos.com'
   - '+.tongyue.com'
   - '+.tongzhuo100.com'
@@ -56144,7 +56139,6 @@ payload:
   - '+.wuximarathon.com'
   - '+.wuxin.info'
   - '+.wuxinban.com'
-  - '+.wuxiqiangheng.com'
   - '+.wuxiwang.net'
   - '+.wuyang-honda.com'
   - '+.wuyangplatform.com'
@@ -58949,6 +58943,7 @@ payload:
   - '+.yageo.tech'
   - '+.yago-mall.com'
   - '+.yahacode.com'
+  - '+.yahaha.net'
   - '+.yahaizi.com'
   - '+.yahoo001.com'
   - '+.yahotab.com'
@@ -62997,7 +62992,6 @@ payload:
   - '+.zhongwei-info.com'
   - '+.zhongweijy.com'
   - '+.zhongwenhexinqikan.com'
-  - '+.zhongwenqing.com'
   - '+.zhongwucan.com'
   - '+.zhongxiangdichan.net'
   - '+.zhongxiaole.net'
@@ -63825,7 +63819,6 @@ payload:
   - '+.zongheng001.com'
   - '+.zonghengke.com'
   - '+.zonghengnews.com'
-  - '+.zonglai.mobi'
   - '+.zongming.net'
   - '+.zongs365.com'
   - '+.zongshenmotor.com'
