--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1134,6 +1134,7 @@ payload:
   - '+.135309.com'
   - '+.135320.com'
   - '+.135650.com'
+  - '+.13567.com'
   - '+.1356789.com'
   - '+.1356net.com'
   - '+.135958.com'
@@ -1276,6 +1277,7 @@ payload:
   - '+.163663.com'
   - '+.163686.com'
   - '+.1637.com'
+  - '+.163888.net'
   - '+.163cdn.com'
   - '+.163cn.tv'
   - '+.163cp.com'
@@ -1925,6 +1927,7 @@ payload:
   - '+.210997.com'
   - '+.210z.com'
   - '+.2113.net'
+  - '+.2114.com'
   - '+.2115.com'
   - '+.211600.com'
   - '+.211ic.com'
@@ -2552,7 +2555,6 @@ payload:
   - '+.3259.com'
   - '+.326pay.com'
   - '+.32800.com'
-  - '+.328888.xyz'
   - '+.328f.com'
   - '+.328vip.com'
   - '+.3290.com'
@@ -3854,7 +3856,6 @@ payload:
   - '+.51job.com'
   - '+.51jobcdn.com'
   - '+.51jobdns.com'
-  - '+.51joyfish.com'
   - '+.51js.com'
   - '+.51jt.com'
   - '+.51jucaimi.com'
@@ -4470,6 +4471,7 @@ payload:
   - '+.5433.com'
   - '+.545c.com'
   - '+.5460.net'
+  - '+.54674479.com'
   - '+.5490146.cc'
   - '+.5490196.cc'
   - '+.5499.com'
@@ -4488,6 +4490,7 @@ payload:
   - '+.54md.com'
   - '+.54op.com'
   - '+.54pictu.com'
+  - '+.54qs.com'
   - '+.54tf.com'
   - '+.54traveler.com'
   - '+.54tusi.com'
@@ -4753,6 +4756,7 @@ payload:
   - '+.593yx.com'
   - '+.5947.net'
   - '+.59490.com'
+  - '+.5951835ccc.com'
   - '+.595818.com'
   - '+.595led.com'
   - '+.595tuchuang.com'
@@ -5106,6 +5110,7 @@ payload:
   - '+.6543210.com'
   - '+.654321wan.com'
   - '+.654h.com'
+  - '+.65522v.com'
   - '+.655a.com'
   - '+.655u.com'
   - '+.655yx.com'
@@ -5404,6 +5409,7 @@ payload:
   - '+.711pr.com'
   - '+.7120.com'
   - '+.712100.com'
+  - '+.71268924.com'
   - '+.71360.com'
   - '+.7139.com'
   - '+.715083.com'
@@ -5976,6 +5982,7 @@ payload:
   - '+.861817.com'
   - '+.86215.com'
   - '+.8624x.com'
+  - '+.86255845.com'
   - '+.86262.com'
   - '+.8633.com'
   - '+.863347.com'
@@ -6164,6 +6171,7 @@ payload:
   - '+.89dj.com'
   - '+.89ds.com'
   - '+.89hl.com'
+  - '+.89qw.com'
   - '+.89uu.com'
   - '+.8a.hk'
   - '+.8ao8ao.com'
@@ -7034,7 +7042,6 @@ payload:
   - '+.9txs.org'
   - '+.9u.net'
   - '+.9upk.com'
-  - '+.9v.com'
   - '+.9vf.com'
   - '+.9w9.com'
   - '+.9wee.com'
@@ -7890,6 +7897,7 @@ payload:
   - '+.aitupian.com'
   - '+.aituwo.com'
   - '+.aityp.com'
+  - '+.aiufida.com'
   - '+.aiurl.com'
   - '+.aiuw.com'
   - '+.aiuxdesign.com'
@@ -8717,7 +8725,6 @@ payload:
   - '+.apgoview.com'
   - '+.aphidic.com'
   - '+.api.anythinktech.com'
-  - '+.api.bz'
   - '+.apiadmin.org'
   - '+.apiairasia.com'
   - '+.apicase.io'
@@ -11119,6 +11126,7 @@ payload:
   - '+.bjyunyu.com'
   - '+.bjywt.com'
   - '+.bjzaxy.com'
+  - '+.bjzbb.com'
   - '+.bjzbkj.com'
   - '+.bjzcha.com'
   - '+.bjzcth.com'
@@ -11954,6 +11962,7 @@ payload:
   - '+.bytestacks.com'
   - '+.bytetcc.com'
   - '+.bytetos.com'
+  - '+.bytewars.cc'
   - '+.bytexns.com'
   - '+.bytexservice.com'
   - '+.byts.com'
@@ -12615,7 +12624,6 @@ payload:
   - '+.ccpitsd.com'
   - '+.ccpittex.com'
   - '+.ccpittj.org'
-  - '+.ccpitwh.org'
   - '+.ccpitxiamen.org'
   - '+.ccpitxian.org'
   - '+.ccpitxj.org'
@@ -12827,9 +12835,11 @@ payload:
   - '+.cdnhwc5.com'
   - '+.cdnhwc6.com'
   - '+.cdnhwc8.com'
+  - '+.cdnhwcbzj102.com'
   - '+.cdnhwcedt124.com'
   - '+.cdnhwchcg02.com'
   - '+.cdnhwcibv122.com'
+  - '+.cdnhwctnm107.com'
   - '+.cdnidc.net'
   - '+.cdnjtzy.com'
   - '+.cdnle.com'
@@ -13056,6 +13066,7 @@ payload:
   - '+.cf.com'
   - '+.cf69.com'
   - '+.cf865.com'
+  - '+.cf9q4i.xyz'
   - '+.cfachina.org'
   - '+.cfbond.com'
   - '+.cfc365.com'
@@ -15344,7 +15355,6 @@ payload:
   - '+.cnhaio.com'
   - '+.cnhalo.net'
   - '+.cnhan.com'
-  - '+.cnhandan.com'
   - '+.cnhanxing.com'
   - '+.cnhaoshengyi.com'
   - '+.cnhaskell.com'
@@ -17318,7 +17328,6 @@ payload:
   - '+.dashuihua.com'
   - '+.dashuju123.com'
   - '+.dashuye.com'
-  - '+.dasougu.com'
   - '+.dasoujia.com'
   - '+.dassm.com'
   - '+.dasung.com'
@@ -17599,7 +17608,6 @@ payload:
   - '+.ddwzh.com'
   - '+.ddxinwen.com'
   - '+.ddxq.mobi'
-  - '+.ddxs.cc'
   - '+.ddxstxt8.com'
   - '+.ddyqh.com'
   - '+.ddyun.com'
@@ -19000,7 +19008,6 @@ payload:
   - '+.dripcar.com'
   - '+.driverdevelop.com'
   - '+.drivergenius.com'
-  - '+.driversdown.com'
   - '+.driverzeng.com'
   - '+.drivethelife.com'
   - '+.drli.group'
@@ -19646,7 +19653,6 @@ payload:
   - '+.eastcoms.com'
   - '+.eastday.com'
   - '+.eastdesign.net'
-  - '+.eastdigit.com'
   - '+.eastdrama.com'
   - '+.eastdushi.com'
   - '+.easteat.com'
@@ -21512,6 +21518,7 @@ payload:
   - '+.fengmanginfo.com'
   - '+.fengmaniu.com'
   - '+.fengmeng.net'
+  - '+.fengmi-baike.com'
   - '+.fengmk2.com'
   - '+.fengniao.com'
   - '+.fengniaohuanjing.com'
@@ -22131,7 +22138,6 @@ payload:
   - '+.fqnovelstatic.com'
   - '+.fqnovelvod.com'
   - '+.fqpai.com'
-  - '+.fqsszx.com'
   - '+.fqxs.org'
   - '+.fr-odc.samsungapps.com'
   - '+.fr-trading.com'
@@ -25623,7 +25629,6 @@ payload:
   - '+.hbskw.com'
   - '+.hbslndx.com'
   - '+.hbsmservice.com'
-  - '+.hbsmw.com'
   - '+.hbsocar.com'
   - '+.hbsoft.net'
   - '+.hbsogdjt.com'
@@ -26028,7 +26033,6 @@ payload:
   - '+.hengxinjinshu.com'
   - '+.hengxueedu.com'
   - '+.hengyan.com'
-  - '+.hengyer.com'
   - '+.hengyidai.com'
   - '+.hengyigl.com'
   - '+.hengyoux.com'
@@ -26508,7 +26512,6 @@ payload:
   - '+.hkxbjt.com'
   - '+.hkxen.com'
   - '+.hkyykq.com'
-  - '+.hkzcdn.com'
   - '+.hkzlcm.com'
   - '+.hl-brushes.com'
   - '+.hl95.com'
@@ -26907,6 +26910,7 @@ payload:
   - '+.hookdll.com'
   - '+.hoolai.com'
   - '+.hoolaigames.com'
+  - '+.hoolee8.com'
   - '+.hoolinks.com'
   - '+.hoolo.tv'
   - '+.hoop-archi.com'
@@ -27339,7 +27343,6 @@ payload:
   - '+.huahanart.com'
   - '+.huahua777.com'
   - '+.huahuacaocao.com'
-  - '+.huahuakon.com'
   - '+.huahuo.com'
   - '+.huaibaobei.com'
   - '+.huaibei.com'
@@ -28104,6 +28107,7 @@ payload:
   - '+.hxsec.com'
   - '+.hxshx.com'
   - '+.hxsme.org'
+  - '+.hxstrive.com'
   - '+.hxtk.com'
   - '+.hxwglm.com'
   - '+.hxxkw.org'
@@ -28640,6 +28644,7 @@ payload:
   - '+.icloudnative.io'
   - '+.icloudnews.net'
   - '+.iclouds.work'
+  - '+.icloudv6.com'
   - '+.icloudwaf.com'
   - '+.icmade.com'
   - '+.icme14.org'
@@ -28941,6 +28946,7 @@ payload:
   - '+.iflyhealth.com'
   - '+.iflying.com'
   - '+.iflyink.com'
+  - '+.iflynote.com'
   - '+.iflyos.vip'
   - '+.iflyread.com'
   - '+.iflyrec.com'
@@ -29357,7 +29363,6 @@ payload:
   - '+.imgkr.com'
   - '+.imglefeng.com'
   - '+.imglink.win'
-  - '+.imgloc.com'
   - '+.imgo.tv'
   - '+.imgscdn.com'
   - '+.imgse.com'
@@ -30044,6 +30049,7 @@ payload:
   - '+.itavcn.com'
   - '+.itbegin.com'
   - '+.itbeihe.com'
+  - '+.itbiancheng.com'
   - '+.itbiaoju.com'
   - '+.itbilu.com'
   - '+.itbkz.com'
@@ -30230,6 +30236,7 @@ payload:
   - '+.iudodo.com'
   - '+.iufida.com'
   - '+.iuinns.com'
+  - '+.iun2s8.xyz'
   - '+.iuni.com'
   - '+.iuoooo.com'
   - '+.iuplus.com'
@@ -31973,7 +31980,6 @@ payload:
   - '+.joe92.com'
   - '+.joenchen.com'
   - '+.johhan.com'
-  - '+.johnwatsondev.com'
   - '+.johogames.com'
   - '+.joiest.com'
   - '+.joinchitchat.com'
@@ -33482,7 +33488,6 @@ payload:
   - '+.kinval.com'
   - '+.kinzoncap.com'
   - '+.kirgen.com'
-  - '+.kirikira.com'
   - '+.kirimasharo.com'
   - '+.kirin-tech.com'
   - '+.kirincloud.net'
@@ -34228,7 +34233,6 @@ payload:
   - '+.kx7p.com'
   - '+.kxapp.com'
   - '+.kxapps.com'
-  - '+.kxbaidu.com'
   - '+.kxbox.com'
   - '+.kxcblog.com'
   - '+.kxceping.com'
@@ -34258,6 +34262,7 @@ payload:
   - '+.kxxxl.com'
   - '+.kxzmw.com'
   - '+.ky-express.com'
+  - '+.ky0001.vip'
   - '+.ky0048.cc'
   - '+.ky010.vip'
   - '+.ky107.co'
@@ -34479,6 +34484,7 @@ payload:
   - '+.langrencard.com'
   - '+.langrenclub.com'
   - '+.langrensha.net'
+  - '+.langtao.cc'
   - '+.langtaojin.com'
   - '+.langtze.com'
   - '+.languangdy.com'
@@ -35971,6 +35977,7 @@ payload:
   - '+.lm335.com'
   - '+.lm553.com'
   - '+.lm685.com'
+  - '+.lm7979.com'
   - '+.lm9999.com'
   - '+.lmacc.com'
   - '+.lmanmo.com'
@@ -37516,6 +37523,7 @@ payload:
   - '+.mdy-edu.com'
   - '+.mdybk.com'
   - '+.mdydt.net'
+  - '+.mdzgjx.com'
   - '+.me-city.com'
   - '+.me361.com'
   - '+.me4399.com'
@@ -39480,6 +39488,7 @@ payload:
   - '+.n12m.cc'
   - '+.n18081.com'
   - '+.n21.cc'
+  - '+.n28082.com'
   - '+.n3293.com'
   - '+.n3762.com'
   - '+.n3875.com'
@@ -39696,7 +39705,6 @@ payload:
   - '+.ncartfoundation.org'
   - '+.ncdxbbs.com'
   - '+.ncfcsa.org'
-  - '+.ncfcw.net'
   - '+.ncfgroup.com'
   - '+.ncfwx.com'
   - '+.ncfxwhjjh.com'
@@ -40823,7 +40831,6 @@ payload:
   - '+.okinfo.org'
   - '+.okjike.com'
   - '+.okjk.co'
-  - '+.okjoys.com'
   - '+.okjx.cc'
   - '+.okki.com'
   - '+.okkkk.com'
@@ -43221,7 +43228,6 @@ payload:
   - '+.qiantucdn.com'
   - '+.qianvisa.com'
   - '+.qianwa.com'
-  - '+.qianwee.com'
   - '+.qianxiangbank.com'
   - '+.qianxibj.net'
   - '+.qianxin.com'
@@ -44582,6 +44588,7 @@ payload:
   - '+.rdcy.org'
   - '+.rddoc.com'
   - '+.rdgz.org'
+  - '+.rdhyw.com'
   - '+.rdidc.com'
   - '+.rdnsdb.com'
   - '+.rdplat.com'
@@ -49152,6 +49159,7 @@ payload:
   - '+.suofeiya.com'
   - '+.suofeiyashop.com'
   - '+.suoge.net'
+  - '+.suokao.com'
   - '+.suosihulian.com'
   - '+.suoxin5.com'
   - '+.suoyiren.com'
@@ -49641,6 +49649,7 @@ payload:
   - '+.szisland.com'
   - '+.szjcyyy.com'
   - '+.szjhxjt.com'
+  - '+.szjinhuanyu.com'
   - '+.szjlwul.com'
   - '+.szjunfei.com'
   - '+.szjuquan.com'
@@ -50236,6 +50245,7 @@ payload:
   - '+.tcl.com'
   - '+.tclbusiness.com'
   - '+.tclclouds.com'
+  - '+.tcljd.com'
   - '+.tclking.com'
   - '+.tclkqn.com'
   - '+.tcloudbase.com'
@@ -50927,6 +50937,7 @@ payload:
   - '+.tingliku.com'
   - '+.tingmall.com'
   - '+.tingmimi.net'
+  - '+.tingniukeji.com'
   - '+.tingroom.com'
   - '+.tingshuge.com'
   - '+.tingsonglaw.com'
@@ -51180,6 +51191,7 @@ payload:
   - '+.toecsec.com'
   - '+.toecsoft.com'
   - '+.toecxy.com'
+  - '+.tofengmi.com'
   - '+.togj.com'
   - '+.togocareer.com'
   - '+.togogo.net'
@@ -52312,6 +52324,7 @@ payload:
   - '+.u77.com'
   - '+.u78.com'
   - '+.u7u9.com'
+  - '+.u8376.com'
   - '+.u8sy.com'
   - '+.u8yx.com'
   - '+.u9game.net'
@@ -52320,7 +52333,6 @@ payload:
   - '+.u9u8.com'
   - '+.u9u9.com'
   - '+.u9wan.com'
-  - '+.ua168.com'
   - '+.uahh.site'
   - '+.uami-global.org'
   - '+.uao-online.com'
@@ -55379,7 +55391,6 @@ payload:
   - '+.wj166.com'
   - '+.wjajw.com'
   - '+.wjasset.com'
-  - '+.wjbb.com'
   - '+.wjbk.site'
   - '+.wjceo.com'
   - '+.wjdaily.com'
@@ -55542,6 +55553,7 @@ payload:
   - '+.wnzy.net'
   - '+.wo-smart.com'
   - '+.wo-xa.com'
+  - '+.wo.cc'
   - '+.wo113.net'
   - '+.wo116114.com'
   - '+.wo123.com'
@@ -60428,7 +60440,6 @@ payload:
   - '+.yoooooooooo.com'
   - '+.yoopu.me'
   - '+.yootou.com'
-  - '+.yoouxi.com'
   - '+.yooxun.com'
   - '+.yooxuu.com'
   - '+.yooyoo360.com'
@@ -60934,7 +60945,6 @@ payload:
   - '+.ytcutv.com'
   - '+.ytdaily.com'
   - '+.ytdcloud.com'
-  - '+.ytdfcw.com'
   - '+.yte1.com'
   - '+.yteng.net'
   - '+.ytesting.com'
@@ -61867,7 +61877,6 @@ payload:
   - '+.zampdsp.com'
   - '+.zamplink.net'
   - '+.zamplus.com'
-  - '+.zan-shang.com'
   - '+.zanba.com'
   - '+.zanbai.com'
   - '+.zangaifamily.com'
@@ -63295,6 +63304,7 @@ payload:
   - '+.zidan.chat'
   - '+.zidanduanxin.com'
   - '+.zidanduanxin.net'
+  - '+.zidg.com'
   - '+.zidian8.com'
   - '+.zidianwang.com'
   - '+.zidoo.tv'
