--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1566,6 +1566,7 @@ payload:
   - '+.17wclass.com'
   - '+.17weike.com'
   - '+.17wendao.com'
+  - '+.17whz.com'
   - '+.17win.com'
   - '+.17ww.cc'
   - '+.17xie.com'
@@ -18155,6 +18156,7 @@ payload:
   - '+.digua.com'
   - '+.diguage.com'
   - '+.diguan.wang'
+  - '+.diguazu.com'
   - '+.diguobbs.com'
   - '+.dihuikj.com'
   - '+.diiqu.com'
@@ -18439,7 +18441,6 @@ payload:
   - '+.dmjtxt.com'
   - '+.dmlei.com'
   - '+.dmm87d.xyz'
-  - '+.dmmds.com'
   - '+.dmozdir.org'
   - '+.dmpans.com'
   - '+.dmqst.com'
@@ -19961,6 +19962,7 @@ payload:
   - '+.eduzs.net'
   - '+.edward-han.com'
   - '+.edwiv.com'
+  - '+.ee-nav.com'
   - '+.ee1234.com'
   - '+.ee68.com'
   - '+.ee8828.com'
@@ -35444,6 +35446,7 @@ payload:
   - '+.lingdonghuyu.com'
   - '+.lingdunwang.com'
   - '+.lingduohome.com'
+  - '+.lingduzuji.com'
   - '+.lingdz.com'
   - '+.lingfei.wang'
   - '+.lingfengyun.com'
@@ -39593,6 +39596,7 @@ payload:
   - '+.nbahjx.com'
   - '+.nbaidai.com'
   - '+.nball.cc'
+  - '+.nbalxhf.com'
   - '+.nbaqmq.com'
   - '+.nbayaobasketballclub.com'
   - '+.nbazww.com'
@@ -40197,6 +40201,7 @@ payload:
   - '+.nlypx.com'
   - '+.nlzpy.com'
   - '+.nm8yx.com'
+  - '+.nmbxd1.com'
   - '+.nmet168.com'
   - '+.nmgchigang.com'
   - '+.nmgd.com'
@@ -40790,6 +40795,7 @@ payload:
   - '+.okooo.com'
   - '+.okoooimg.com'
   - '+.okpush.com'
+  - '+.okpython.com'
   - '+.okrecovery.com'
   - '+.okskills.com'
   - '+.oksun.com'
@@ -49147,7 +49153,6 @@ payload:
   - '+.suqicloud.com'
   - '+.suqishi.com'
   - '+.suqnn.com'
-  - '+.surdoc.net'
   - '+.sure56.com'
   - '+.suremotoo.site'
   - '+.surgerycast.com'
@@ -55927,6 +55932,7 @@ payload:
   - '+.wufuba.com'
   - '+.wufun.net'
   - '+.wufuquanlawyer.com'
+  - '+.wugongdong.com'
   - '+.wuguiyunwei.com'
   - '+.wuguoren.com'
   - '+.wuguyufen.com'
@@ -61391,6 +61397,7 @@ payload:
   - '+.yusi.com'
   - '+.yusi.tv'
   - '+.yusi123.com'
+  - '+.yutaoyouxi.com'
   - '+.yuteng.site'
   - '+.yutennet.com'
   - '+.yutian.cc'
