--- a/directbak.yaml
+++ b/directbak.yaml
@@ -4242,7 +4242,6 @@ payload:
   - '+.52audio.com'
   - '+.52ayw.com'
   - '+.52bar.com'
-  - '+.52bendi.com'
   - '+.52biquge.com'
   - '+.52bjd.com'
   - '+.52bji.com'
@@ -6112,7 +6111,6 @@ payload:
   - '+.88995799.com'
   - '+.88999.com'
   - '+.8899yyy.vip'
-  - '+.889su.com'
   - '+.88bank.com'
   - '+.88bx.com'
   - '+.88cdn.com'
@@ -7080,7 +7078,6 @@ payload:
   - '+.a5idc.net'
   - '+.a632079.me'
   - '+.a67dy.com'
-  - '+.a6a1.com'
   - '+.a6shi.com'
   - '+.a7.com'
   - '+.a8.com'
@@ -18287,7 +18284,6 @@ payload:
   - '+.diyishijian.com'
   - '+.diyitech.com'
   - '+.diyixiazai.com'
-  - '+.diyixitong.com'
   - '+.diyiyou.com'
   - '+.diyiyunshi.com'
   - '+.diyiziti.com'
@@ -21282,6 +21278,7 @@ payload:
   - '+.fcloudpaas.com'
   - '+.fcnes.com'
   - '+.fcpiao.com'
+  - '+.fcpowerup.com'
   - '+.fcrc114.com'
   - '+.fcsc.com'
   - '+.fcvvip.com'
@@ -25593,7 +25590,6 @@ payload:
   - '+.hbspcar.com'
   - '+.hbsql.com'
   - '+.hbssfw.com'
-  - '+.hbssspot.com'
   - '+.hbsszx.com'
   - '+.hbstars.com'
   - '+.hbsti.com'
@@ -27495,7 +27491,6 @@ payload:
   - '+.huaxi100.com'
   - '+.huaxia.com'
   - '+.huaxia77.com'
-  - '+.huaxiaci.com'
   - '+.huaxiaf.com'
   - '+.huaxiald.com'
   - '+.huaxiangdiao.com'
@@ -31611,6 +31606,7 @@ payload:
   - '+.jiuyuehuyu.com'
   - '+.jiuyuu.com'
   - '+.jiuzhaigou-china.com'
+  - '+.jiuzhang.com'
   - '+.jiuzheng.com'
   - '+.jiuzhilan.com'
   - '+.jiuzhinews.com'
@@ -32806,7 +32802,6 @@ payload:
   - '+.k345.cc'
   - '+.k366.com'
   - '+.k369.com'
-  - '+.k3851.com'
   - '+.k3887.com'
   - '+.k38s0.xyz'
   - '+.k4nz.com'
@@ -34051,7 +34046,6 @@ payload:
   - '+.kulengvps.com'
   - '+.kuletco.com'
   - '+.kuli.ren'
-  - '+.kuliqiang.com'
   - '+.kuliwang.net'
   - '+.kuman.com'
   - '+.kuman56.com'
@@ -35571,6 +35565,7 @@ payload:
   - '+.linshang.com'
   - '+.linshigong.com'
   - '+.linstitute.net'
+  - '+.lintcode.com'
   - '+.lintey.com'
   - '+.lintongrc.com'
   - '+.linuo-paradigma.com'
@@ -40402,7 +40397,6 @@ payload:
   - '+.nshen.net'
   - '+.nshzpks.com'
   - '+.nsini.com'
-  - '+.nsisfans.com'
   - '+.nsoad.com'
   - '+.nsoft.vip'
   - '+.nsrfww.com'
@@ -46958,7 +46952,6 @@ payload:
   - '+.shmusic.org'
   - '+.shmxcz.org'
   - '+.shmy365.com'
-  - '+.shmyapi.com'
   - '+.shmylike.com'
   - '+.shnaer.com'
   - '+.shnb12315.com'
@@ -50691,7 +50684,6 @@ payload:
   - '+.tianshiyiyuan.com'
   - '+.tianshouzhi.com'
   - '+.tianshuge.com'
-  - '+.tiansin.com'
   - '+.tiantailaw.com'
   - '+.tiantang6.com'
   - '+.tiantangnian.com'
@@ -52900,7 +52892,6 @@ payload:
   - '+.uvexperience.com'
   - '+.uvledtek.com'
   - '+.uvov.com'
-  - '+.uvu.cc'
   - '+.uw3c.com'
   - '+.uw9.net'
   - '+.uwa4d.com'
@@ -53481,7 +53472,6 @@ payload:
   - '+.vpsdawanjia.com'
   - '+.vpsdx.com'
   - '+.vpser.net'
-  - '+.vpsjie.com'
   - '+.vpsjxw.com'
   - '+.vpsmm.com'
   - '+.vpsno.com'
@@ -53651,7 +53641,6 @@ payload:
   - '+.w0lker.com'
   - '+.w10a.com'
   - '+.w10xitong.com'
-  - '+.w10xz.com'
   - '+.w10zj.com'
   - '+.w123w.com'
   - '+.w1365.com'
@@ -58531,7 +58520,6 @@ payload:
   - '+.xunleige88.com'
   - '+.xunleiyy.com'
   - '+.xunlew.com'
-  - '+.xunli.xyz'
   - '+.xunliandata.com'
   - '+.xunlong.net'
   - '+.xunlong.tv'
@@ -59471,7 +59459,6 @@ payload:
   - '+.yhqurl.com'
   - '+.yhrcb.com'
   - '+.yhres.com'
-  - '+.yhrtvu.com'
   - '+.yhshapp.com'
   - '+.yhsms.com'
   - '+.yhspy.com'
@@ -60491,7 +60478,6 @@ payload:
   - '+.youmai.com'
   - '+.youmaolu.com'
   - '+.youme.im'
-  - '+.youmeng.me'
   - '+.youmenr.com'
   - '+.youmew.com'
   - '+.youmi.net'
@@ -60648,7 +60634,6 @@ payload:
   - '+.youyeetoo.com'
   - '+.youyegame.com'
   - '+.youyi-game.com'
-  - '+.youyikeji666.com'
   - '+.youyilm.com'
   - '+.youyiqi.com'
   - '+.youyiqiaogou.com'
@@ -63103,7 +63088,6 @@ payload:
   - '+.zhulanli.com'
   - '+.zhuli999.com'
   - '+.zhulincat.com'
-  - '+.zhuliudai.com'
   - '+.zhulixiaolie.com'
   - '+.zhulogic.com'
   - '+.zhulong.com'
@@ -63425,9 +63409,7 @@ payload:
   - '+.zjgzcpa.com'
   - '+.zjhangyin.com'
   - '+.zjhcbank.com'
-  - '+.zjhee.com'
   - '+.zjhejiang.com'
-  - '+.zjhim.com'
   - '+.zjhnlianzhong.com'
   - '+.zjhnrb.com'
   - '+.zjhualing.com'
@@ -64375,7 +64357,6 @@ payload:
   - '+.zzhybz.com'
   - '+.zzidc.com'
   - '+.zzit.org'
-  - '+.zzjc5.com'
   - '+.zzjunzhi.com'
   - '+.zzjxbg.com'
   - '+.zzkiss000.com'
